Save/Update files [ci skip]

--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -755,8 +755,8 @@
  IME_ADJ:0 "イメレティ"
  TAB:1 "マーザンダラーン"
  TAB_ADJ:1 "マーザンダラーン"
- MYR:0 "野人女真"
- MYR_ADJ:0 "野人女真"
+ MYR:1 "Xibe"
+ MYR_ADJ:1 "Xiben"
  MHX:0 "海西女真"
  MHX_ADJ:0 "海西女真"
  KRC:0 "ホルチン"
