--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -940,7 +940,7 @@
  TERRITORY_CONVERT_CULTURE_NOT_ALLOWED:1 "§R文化を転向するためには、州が完全に中核化され、ステートの一部となっている必要があります§!"
  CHARTER_COMPANY_NO_AVAILABLE_PROVINCES:4 "我々の植民範囲内の別大陸にあり、交易会社に割り当て可能な首都でなく既に交易会社ではない州を彼らは保有していていません。"
  CHARTER_COMPANY_INDEBT:0 "勅許会社を求めることはできません。$REASON$\n"
- mechanic_has_parliament_yes:2 "議会を有効化\n貴族階級を無効化"
+ mechanic_has_parliament_yes:3 "Enables Parliament."
  COT_ADD_LEVEL_EFFECT:3 "$PROVINCE|Y$の交易中心地レベルが$DELTA|Y$増加します\n"
  COT_REMOVE_LEVEL_EFFECT:2 "$PROVINCE|Y$の交易中心地レベルが$DELTA|R$低下します\n"
  COT_RIGHT_CLICK_TO_DOWNGRADE_SUBJECT:0 "右クリックで威信$COST|R$と引き換えに$NAME|Y$へダウングレードします。従属国が支配する交易中心地をダウングレードすると、独立欲求が§R$LIBERTY_DESIRE$%§!増加します。"
@@ -973,3 +973,5 @@
  mechanic_raze_province_no:0 "略奪不可の州"
  NO_CARPET_SIEGE_MOVING:1 "§R移動中に自動包囲は管理不可§!\n"
  COT_NOT_ENOUGH_DEVELOPMENT:0 "§R$UPGRADE_NAME|Y$にアップグレードするには$NEED$の開発度が必要ですが、この州の開発度は$CURR$しかありません"
+ mechanic_disables_nobility_yes:0 "Disables Nobility estate."
+ mechanic_disables_nobility_no:0 "Enables Nobility estate."
