--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -527,7 +527,7 @@
  emp_hun_black_army_supreme_trigger_tooltip:0 "§Y絶対主義の時代§!以降である"
  emp_hun_improve_economy_title:0 "強い経済"
  emp_hun_improve_economy_desc:0 "多くの潜在的脅威の間に挟まれた列強として持ち合わせている競争能力は、領内からすべての富をかき集める能力に左右される。"
- emp_hun_corviana_library_title:0 "コルヴィナ文庫"
+ emp_hun_corviana_library_title:1 "Bibliotheca Corviniana"
  emp_hun_corviana_library_desc:0 "古典主義の知識の再興及びこの知識により自国の科学者や哲学者にもたらされた後押しと共に、ヨーロッパに溜め込まれていた知識を保管できる図書館の設立によって、自国は十分な貢献を果たすだろう。"
  emp_hun_nagyszombat_university_title:0 "ナジソンバト大学"
  emp_hun_nagyszombat_university_desc:0 "国の発展を支える次世代の思想家を育てる、宗教的かつ世俗的な教育の中心地を創設すべきだ。"
@@ -559,7 +559,7 @@
  desc_hun_supreme_black_army:0 "我々の軍隊による襲撃は敵の心に恐怖を植え付け、我々の同盟国の間では祝福の原因となる。"
  hun_strong_economy:0 "経済的な強さ"
  desc_hun_strong_economy:0 "我々の経済は繁栄しており、我々が軍の維持や、検討する可能性のある他のさまざまな事業に必要な資金を、より簡単に獲得することを可能にしている。"
- hun_corviana_library:0 "コルヴィナ文庫"
+ hun_corviana_library:1 "Bibliotheca Corviniana"
  desc_hun_corviana_library:0 "我々の国立図書館は、その中にヨーロッパ文明の蓄積された知識を保持し、我々の思想家たちに哲学、神学、法律、歴史、地理学、文学、自然科学、医学、建築および他の多くの分野の最先端の知識へのアクセスを提供する。"
  hun_nagysz_uni_catholic:0 "ナジソンバト大学"
  desc_hun_nagysz_uni_catholic:0 "我々はイエズス会が運営する高等教育機関を設立し、それを通じて次世代の宗教思想家を育成するべきだ。"
@@ -1269,7 +1269,6 @@
  emp_pap_pontifical_universities_title:0 "教皇庁立大学"
  emp_pap_pontifical_universities_desc:1 "創造の謎は我々の指先にあり、扉が開かれるのを待っている。学問的および科学的研究は奨励されるべきであるー他にどんな不思議が発見されるか誰が知っていると言うのだろう？"
  pap_papal_swiss_guard:0 "教皇のスイス衛兵"
- desc_papal_swiss_guard:0 "特別な契約は、我々が金で購入できる最高の兵士の一部を徴募することを可能にしている。"
  pap_papal_mission:0 "教皇の使節"
  desc_pap_papal_mission:0 "教皇の使節は、我々が神の言葉を広めるのを助けることを目的としている。"
  pap_papal_military_aid:0 "教皇の軍事援助"
@@ -2456,3 +2455,4 @@
  build_manufactories_mission_tooltip:0 "の§Y[Root.GetName]§!が領有する州に工場がある。"
  hin_industrial_tt:0 "の§Yベンガル§!地方に領有する州が§Y工場§!を持つ。"
  peasants_means_of_production_tt:0 "の領有州に製造所、織物工場、武器工場、海軍機器工場または溶鉱炉がある。"
+ desc_pap_papal_swiss_guard:0 "Special contracts allow us to recruit some of the best soldiers money can buy"
