--- a/source/localisation/mandala_missions_l_english.yml
+++ b/source/localisation/mandala_missions_l_english.yml
@@ -635,7 +635,6 @@
  mas_the_book_of_maragtas_title:0 "書物マラグタス"
  mas_the_book_of_maragtas_desc:0 "今こそ、我が民族の古代の領地を取り戻すのだ。ボルネオ島の鉄壁を誇る沿岸部に、そして沿岸を越えた奥地に探検隊を送らなければならない。"
  mas_all_the_ships_of_aklan:0 "アクランの全船舶"
- desc_all_the_ships_of_aklan:0 "自国の海軍は劇的に成長し、近隣諸国に強烈な印象を与えた。"
  mas_the_sound_of_bells:0 "鐘の音"
  desc_mas_the_sound_of_bells:0 "自国の古代の聖歌における威嚇的な音は、敵へと届いている。"
  mas_going_back_home:0 "帰郷"
@@ -699,7 +698,6 @@
  ne_longhouses_title:0 "ウィグワムとロングハウス"
  ne_longhouses_desc:0 "最優先事項の一つに、国民への避難所の提供が挙げられる。しっかりと頑強な居住施設を建造することで、国民の安全を確保せねばならない。"
  ne_fortified_village:0 "要塞化された村落"
- desc_fortified_village:0 "その村に住む人々は今や安心して休息できる。"
  ne_palisades_title:0 "柵の建造"
  ne_palisades_desc:0 "住居の防護は、国民生活の大きな改善につながる。難攻不落の防備につながる次の段階とは、強固な柵で村全域を守ることだ。"
  ne_palisaded_village:0 "柵で囲われた村"
@@ -866,7 +864,6 @@
  che_the_cave_country_title:0 "洞穴の国"
  che_the_cave_country_desc:0 "自民族に与えられた多くの名の一つが、「洞穴の国で居住する者たち」という意味の名があるが、実際、我々にぴったりの名前だ。我が村を周辺の地は、我が民族の自然と同じほど険しい。"
  che_tunnels:0 "地下道の建設"
- che_tunnels_desc:1 "これに対して効率的にインフラへ投資したことで移動時間が改善された。"
  che_botanical_exports_title:0 "植物の輸出"
  che_botanical_exports_desc:0 "自国の肥沃な土壌では多くの植物が育ち、その中には興味深い性質を持つ植物も多く生息する。治癒に活用できるものもあれば、害になるものもある。双方とも甲乙付け難いほど強力なものだ。この資源を活用し、国際交易を発展させるべきだろう。"
  che_black_drink:0 "黒い飲料"
@@ -898,7 +895,6 @@
  pow_yehakins_title:0 "イェハキンス"
  pow_yehakins_desc:0 "我々の家屋は、若木や、莚、樹皮繊維などで作られている。村に十分な成長の余地があるため、より多くの人が集まり、豊かで繁栄した社会が実現できるだろう。"
  pow_leeroy_yehakins:0 "リロイ・イェハキンス"
- desc_pow_leroy_yehakins:0 "そう、あいつは中へ突撃していったのさ。"
  pow_weroance_title:0 "ウェロアンス"
  pow_weroance_desc:0 "自国の各部族はウェロアンスと呼ばれる有能な指導者に指揮されなければならず、ウェロアンス全員が一人の大首長の権力の下にある。彼らは戦時や平時の際に決断を下し、国民を勝利へと導く。今、我々は新しいウェロアンスを選定する時だ。"
  pow_tsenacommacah_title:0 "セナコマカ"
@@ -907,3 +903,7 @@
  pow_the_laughing_king_desc:0 "勇敢な戦士であることだけが首長の重要な資質ではなく、忠誠心もまた同様に重要である。大笑王の気高さは他の追随を許さないものであり、彼が自国の側にいることは最高の誉だ。"
  pow_yehakins_effect:0 "要塞化家屋もしくはロングハウスが建造されている領有州全てに対して要塞化される。"
  follows_buddha_tt:0 "§Y仏陀§!の教えに従います"
+ desc_mas_all_the_ships_of_aklan:0 "Our navy has grown dramatically, impressing our closest neighbours."
+ desc_ne_fortified_village:0 "The people of our village can now rest at peace."
+ desc_che_tunnels:1 "This investment in effective infrastructures has improved our travel time."
+ desc_pow_leeroy_yehakins:0 "He just ran in."
