--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -748,7 +748,7 @@
  KNOWLEDGE_SHARING_4:0 "知識共有の提案について"
  KNOWLEDGE_SHARING_5:0 "$RESULT$ことを決断しました。"
  KNOWLEDGE_SHARING_6:0 "$EFFECT$"
- KNOWLEDGE_SHARING_LOG:1 "$ACTOR$、$RECIPIENT$の知識共有を$RESULT$"
+ KNOWLEDGE_SHARING_LOG:2 "$RECIPIENT$ decided to $RESULT$ the offer of Knowledge Sharing from $ACTOR$."
  KNOWLEDGE_SHARING_BTN1:1 "OK"
  KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "移動"
@@ -6796,9 +6796,8 @@
  INSUTOUS_SCORNFUL_1:0 "$ACTOR$からの使者"
  INSUTOUS_SCORNFUL_2:1 "$MONARCHTITLE$、$ACTOR$の信頼できない屑が我々に侮辱を送りました"
  INSUTOUS_SCORNFUL_3:0 "§Y「$SCORNFUL_INSULT$」§!"
- INSUTOUS_SCORNFUL_4:1 " "
- INSUTOUS_SCORNFUL_5:1 "我々は今、彼らに開戦する事由を持っており、両国の関係は悪化しています。"
- INSUTOUS_SCORNFUL_6:1 "この粗野で野蛮な$ACTOR$に、目上の者を敬意を持って扱うことを教える必要があります！"
+ INSUTOUS_SCORNFUL_4:2 "We now have a Casus Belli upon them, and our relations have deteriorated."
+ INSUTOUS_SCORNFUL_5:2 "We need to teach these uncouth barbarians of $ACTOR$ to treat their superiors with respect!"
  INSUTOUS_SCORNFUL_LOG:0 "$ACTOR$、我々を侮辱"
  INSUTOUS_SCORNFUL_BTN1:0 "OK"
  INSUTOUS_SCORNFUL_BTN2:0 "OK"
