--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -5459,7 +5459,7 @@
  arl_conversion_of_the_masses:0 "大衆の改宗"
  arl_conversion_of_the_masses_desc:0 "長い間、この地域では、アリーへ敬意を表す者とスンナ派のカリフに敬意を表す者が並んで存在する、宗教上の異端が混合している状態にあった。我々は、正しく崇拝することを明瞭に概説し、最低でも下層階級の間で我が敵のスンナ派の影響力に制限を掛けるよう行動することにより、これらの困った人へ正しい道を示さねばならない。"
  arl_religious_war:0 "宗教戦争"
- arl_religious_war_desc:0 "我が国の敵は多いが、また、国境を遥かに超えてシーア派やアレヴィー派、スーフィー教団の支持を受けている。信者軍の前において、非常に安全であると感じることができるスンナ派の帝国がないよう、これらの集団と共に行動しよう。"
+ arl_religious_war_desc:1 "The enemies of our state are many but we also have the support of Shias, Alevis and Sufi orders far beyond our borders. Let us work together with these elements so that no Sunni Empire can feel too safe before the armies of the faithful."
  arl_amili_mujtahids:0 "アーミリ・ムジュタヒド"
  arl_amili_mujtahids_desc:0 "シーア派は常にイスラム世界において少数派であり、数世紀前のファーティマ朝を除き、主要なシーア派の政府は存在しなかった。これは、我々の前にこの地域を支配した多くのスンナ派の王朝とは異なり、基盤となる完全なる法や制度的枠組みを持たないことを意味する。発展途上の我が国が繁栄するためには、シーア派の法と行政のための永久的な制度を自身の手で創出するように最大限努力せねばならない。\n我が国のための永久的な仕組みを形成することを手伝ってくれる、レヴァントのアーミリのような外国のシーア派の宗教学者を招致しよう。"
  arl_shahs_of_iran:0 "イランのシャー"
@@ -6709,7 +6709,7 @@
  pis_fund_the_masnada:0 "マスナダへの投資"
  pis_fund_the_masnada_desc:1 "愛する自国を守るために、軍隊が必要だ。軍隊を作るには男が必要だ。適当なお金があれば、地元の自由傭兵団を説得して自国の軍に入隊させることができる。"
  MODIFIER_COAST_CAN_NOT_BE_RAIDED:0 "奴隷の襲撃の阻止"
- horde_gov_ideas:0 "遊牧民アイデア"
+ horde_gov_ideas:1 "Horde Ideas"
  horde_gov_ideas_bonus:0 "遊牧民の熱情"
  horse_lords:0 "ステップの馬の主"
  horse_lords_desc:0 "本当に真なる獣は人の性質を持つ。馬は自国の子供の中で生まれ育ち、自民族と同じように高貴さ獰猛性を学ぶ。彼らへの厳しい調教を最大の誇りとし、彼らは我々を最高の主と認める。"
