--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -1009,7 +1009,7 @@
  PROV1030:0 "尾張"
  PROV1031:0 "上川"
  PROV1032:0 "千島列島"
- PROV1033:0 "サハリン"
+ PROV1033:1 "Enchiw"
  PROV1034:0 "カムチャツカ"
  PROV1035:0 "ペーンジナ"
  PROV1036:0 "コルィマ"
@@ -1026,7 +1026,7 @@
  PROV1047:0 "ジュグジュル"
  PROV1048:0 "ミャオ・ガサン"
  PROV1049:0 "ハイランバオ"
- PROV1050:0 "デレン"
+ PROV1050:1 "Tyr"
  PROV1051:0 "アルダン"
  PROV1052:0 "スタノヴォイ"
  PROV1053:0 "ヒンガン"
@@ -2040,7 +2040,7 @@
  PROV2070:0 "チョービシ・ラージャ"
  PROV2071:0 "リンブワン"
  PROV2072:0 "バッカル"
- PROV2073:0 "バルティスターン"
+ PROV2073:1 "Gilgit"
  PROV2074:0 "ラダック"
  PROV2075:0 "ドアバ"
  PROV2076:0 "シアールコート"
@@ -2067,7 +2067,7 @@
  PROV2099:0 "キャンディ"
  PROV2100:0 "ヴァンニ"
  PROV2101:0 "ティルネルヴェーリ"
- PROV2102:0 "ウルカン"
+ PROV2102:1 "Albazin"
  PROV2103:0 "ウディ"
  PROV2104:0 "ビリジャ"
  PROV2105:0 "クル"
@@ -2093,7 +2093,7 @@
  PROV2125:0 "コチコル"
  PROV2126:0 "チュイ"
  PROV2127:0 "ヤシルクル"
- PROV2128:0 "ガリ"
+ PROV2128:1 "Tsaparang"
  PROV2129:0 "チャンタン"
  PROV2130:0 "ニンティ"
  PROV2131:0 "チャムド"
@@ -2155,7 +2155,7 @@
  PROV2187:0 "薩爾図"
  PROV2188:0 "アルチュカ"
  PROV2189:0 "ツェツェルレグ"
- PROV2190:0 "カラコルム"
+ PROV2190:1 "Bayankhongor"
  PROV2191:0 "エジン"
  PROV2192:0 "コルラ"
  PROV2193:0 "ゴビ"
@@ -2814,7 +2814,7 @@
  PROV2850:0 "モンテビデオ"
  PROV2851:0 "コロニア"
  PROV2852:0 "サルト"
- PROV2853:0 "ヤレユ"
+ PROV2853:1 "Yapeyú"
  PROV2854:0 "中央チャコ"
  PROV2855:0 "ミシオネス"
  PROV2856:0 "高地草原"
@@ -3159,9 +3159,9 @@
  PROV4211:0 "達州"
  PROV4212:0 "嘉州"
  PROV4213:0 "瀘州"
- PROV4214:0 "カラル"
+ PROV4214:1 "Ulch"
  PROV4215:0 "フダリ"
- PROV4216:0 "ウリチ"
+ PROV4216:1 "Oroch"
  PROV4217:0 "ピジン"
  PROV4218:0 "ブトハ"
  PROV4219:0 "バヤン・トゥメン"
@@ -3444,7 +3444,7 @@
  PROV548:1 "イーリチプル"
  PROV558:1 "パータリプトラ"
  PROV559:1 "ジャーンシー"
- PROV565:1 "ティンプー"
+ PROV565:2 "Paro"
  PROV590:1 "マルタバン"
  PROV1946:1 "サーターラー"
  PROV1949:1 "ペヌコンダ"
@@ -3614,7 +3614,7 @@
  PROV206:2 "ラ・コルーニャ"
  PROV211:1 "ウエスカ"
  PROV215:1 "バリャドリド"
- PROV333:1 "マヨルカ"
+ PROV333:2 "Mallorca"
  PROV366:1 "グラン・カナリア"
  PROV488:1 "スイ"
  PROV490:1 "バニ"
@@ -3635,7 +3635,7 @@
  PROV4556:0 "アヴェイロ"
  PROV4557:0 "カラタユー"
  PROV4558:0 "オレンセ"
- PROV4559:0 "メノルカ"
+ PROV4559:1 "Menorca"
  PROV4560:0 "イビサ"
  PROV4561:0 "テトゥアン"
  PROV4562:0 "メルス・エル・ケビール"
