--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  centralize_state:0 "ステートの集権化"
- CENTRALIZE_STATE_DESC:2 "§Yステートの集権化§!\n政府改革進捗度を$COST|Y$使用して、$STATE|Y$を最も開発度の高い州に集中させます。そして、その統治コストを$REDUCTION|0Y$削減します。これには$YEARS|0Y$年かかります。"
+ CENTRALIZE_STATE_DESC:5 "§YCentralize State§!\nSpend $COST|Y$ of government progress and $POWER_COST|Y$£adm£ to centralize the $STATE|Y$ in the most developed province, giving the following bonuses to the state:\nLocal State Governing Cost: §G-25.0%§!\nState Maintenance: §G-20.0%§!\nLocal Prosperity Growth: §G+0.10§!\n\nIt will take $YEARS|0Y$ years."
  CENTRALIZE_STATE_COST:0 "十分な政府改革進捗度がありません"
  CENTRALIZE_STATE_TERRITORY:0 "集権化はテリトリーではなく、ステートにのみ行えます。"
  CENTRALIZE_STATE_DEV:1 "$STATE$の統治コストは$STATE_DEV|0$以上でなくてはなりません"
@@ -8,7 +8,7 @@
  CENTRALIZE_STATE_DONE:0 "既にステートの集権化を行っています"
  CENTRALIZE_STATE_PROGRESS:0 "建設は既に進行中です。$DATE$に完了するでしょう。"
  CONFIRM_CENTRALIZE_STATE:0 "$STATE$のステートの集権化"
- CONFIRM_CENTRALIZE_STATE_TEXT:1 "$PROVINCE|Y$州に$STATE|Y$を集中させ、その統治コストを$REDUCTION|0Y$削減するため、政府改革進捗度を$COST|0Y$を使用して本当に構いませんか？これには$YEARS|0Y$年かかります。"
+ CONFIRM_CENTRALIZE_STATE_TEXT:4 "Are you sure you want to spend $COST|0Y$ of government progress and $POWER_COST|Y$£adm£ to centralize the $STATE|Y$ in the province of $PROVINCE|Y$?\nThe $STATE|Y$ will gain the following bonuses:\nState Governing Cost: §G-25.0%§!\nState Maintenance: §G-20.0%§!\nLocal Prosperity Growth: §G+0.10§!\n\nIt will take $YEARS|0Y$ years."
  CENTRALIZE_STATE_CONSTRUCTION_TITLE:0 "ステートの集権化が完了"
  CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "ステートの集権化が完了したとき"
  CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
