--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -48,7 +48,7 @@
  estate_brahmins_legitimacy_to_rule:0 "バラモンの統治の正統性"
  estate_brahmins_brahmin_leadership:0 "バラモンの指導力"
  estate_brahmins_flexible_deities:0 "個人の主神の選択"
- estate_brahmins_flexible_deities_effect_tooltip:1 "§Y25§!の正統性を消費することで§Y20§!年ごとに個人の主神を変更する決断を有効にします。"
+ estate_brahmins_flexible_deities_effect_tooltip:2 "Enables a decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy (or its equivalent for other governments)."
  brahmin_hindu_deity_decision_title:0 "個人の主神の再選択"
  brahmin_hindu_deity_decision_desc:0 "自分の選択を後悔する人も時にはいるだろう。若かりし頃にどの神に従うか決めたら一生それに縛られるのか？幸運なことに、バラモンの計らいでこの件に関しては限度はあるものの柔軟な取り扱いが可能だ。"
  decision_once_every_ten_years:0 "この決断は§Y10§!年に一回だけ選択できます。"
@@ -317,9 +317,9 @@
  estate_vaisyas_patronage_of_the_arts:0 "芸術の後援"
  estate_nomadic_tribes_primacy_to_the_bannermen:0 "八旗の優位性"
  estate_nobles_supremacy_over_crown_effect_tooltip:0 "§Y階級§!は§Y議会§!が召集されなくても§Y議題§!を出す事ができます。"
- estate_church_for_the_faith_effect_tooltip:2 "異端または異教との戦争時の陸軍士気：§G+5%§!\n\n15年間異端または異教と平和状態の場合の陸軍士気：§R-5%§!"
- estate_brahmins_for_the_faith_effect_tooltip:2 "異端または異教との戦争時の陸軍士気：§G+5%§!\n\n15年間異端または異教と平和状態の場合の陸軍士気：§R-5%§!"
- estate_brahmins_flexible_deities_revoke_tooltip:1 "§Y25§!の正統性を消費することで、§Y20§!年ごとに個人の主神を変更するという決断を無効にします。"
+ estate_church_for_the_faith_effect_tooltip:3 "Morale of Armies: §G+5%§! when at war with heretics or heathens.\n\nMorale of Armies: §R-5%§! if at peace with heretics and heathens for 15 years\n\n§YOnly one of the two morale modifiers is active at a time.§!"
+ estate_brahmins_for_the_faith_effect_tooltip:3 "Morale of Armies: §G+5%§! when at war with heretics or heathens.\n\nMorale of Armies: §R-5%§! if at peace with heretics and heathens for 15 years\n\n§YOnly one of the two morale modifiers is active at a time.§!"
+ estate_brahmins_flexible_deities_revoke_tooltip:2 "The decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy (or its equivalent for other governments) will be disabled."
  estate_maratha_levies:0 "徴兵の拡大"
  estate_maratha_levies_for_muslims:0 "マラーター動員数の増加"
  estate_maratha_levies_for_muslims_effect_tooltip:1 "§Yヒンドゥー教§!の領有州はすべて、§Y「マラーター徴兵の増加」§!を獲得し、以下の効果を得ます：\n州人的資源補正：§G+30.0%§!"
@@ -1233,7 +1233,7 @@
  estate_burghers_exclusive_trade_rights_revoke_tooltip:0 "「独占交易権」の補正は所有する全ての州から取り除かれます"
  PRIVILEGE_LOYALTY_CHANGE:1 "$ESTATE$の階級の忠誠均衡値は$VAL|+%0$変化します。"
  PRIVILEGE_INFLUENCE_CHANGE:0 "$ESTATE$の影響力は$VAL|Y%0$変化します。"
- PRIVILEGE_MAX_ABSOLUTISM_CHANGE:0 "最大絶対主義は$VAL|+0$変化します。"
+ PRIVILEGE_MAX_ABSOLUTISM_CHANGE:1 "Max Absolutism will be changed by $VAL|+0$."
  PRIVILEGE_LANDSHARE_CHANGE:0 "$VAL|Y0$の直轄地を$DIR$。"
  PRIVILEGE_NO_CHANGE:0 "この特権は$WHAT|Y$には影響しません。"
  CROWNLAND:0 "直轄地"
@@ -1241,3 +1241,11 @@
  no_other_mil_privilege:0 "§Y月間軍事力§!を付与する他の階級特権がない"
  desc_increase_crown_land_share:0 "土地の所有権を王家側へ集中させることで、広範に及ぶ階級の権力をさらにうまく管理できるようになる。"
  estate_dhimmi_increase_autonomy_in_province_x_tooltip:0 "[agenda_province.GetName]州の自治度が10%以上減少する｡"
+ estate_maratha_subject_rights:0 "Subject Rights"
+ estate_rajput_subject_rights:0 "Subject Rights"
+ estate_dhimmi_grant_liberties:0 "Grant [Root.GetDhimmiName] Liberties"
+ estate_dhimmi_grant_liberties_desc:0 "The [Root.GetDhimmiName] are a minority faction in our state with the power of the majority of the heathens within our borders. By granting them some liberties we can secure their loyalty to us."
+ estate_jains_grant_liberties:0 "Grant [Root.GetJainsName] Liberties"
+ estate_jains_grant_liberties_desc:0 "The [Root.GetJainsName] are a minority wihtin our state, but hold a lot of financial power. By granting them some liberties we can secure their loyalty to us."
+ estate_maratha_subject_rights_desc:0 "[Root.GetUsableNameCap] is a decentralized state in which remote provinces are governed by subjects with considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
+ estate_rajput_subject_rights_desc:0 "[Root.GetUsableNameCap] is a decentralized state in which remote provinces are governed by subjects with considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
