--- a/source/localisation/hnn_1_32_l_english.yml
+++ b/source/localisation/hnn_1_32_l_english.yml
@@ -5,4 +5,4 @@
  encounters_in_the_sun_ea:0 "太陽の光の中での出会い"
  neverending_dunes:0 "終わりなき砂丘"
  the_long_walk_ea:0 "長旅"
- take_native_american_land_desc:0 ""
+ take_native_american_land_desc:1 "War goal is to show them superiority by winning battles."
