--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -677,7 +677,7 @@
  usa_old_man_river.tooltip:0 "§Y[Root.GetName]§!がミシシッピ地方の完全に植民地化された州を少なくとも§Y10§!所有する。"
  remaining_steppe_1.tooltip:0 "§Y[Root.GetName]§!がウラル地方のすべての植民地化された州を所有する。"
  remaining_steppe_2.tooltip:0 "§Y[Root.GetName]§!が西シベリア地方のすべての植民地化された州を所有する。"
- trade_company_region_abroad_tooltip:1 "あなたの首都と同じ大陸にない、3つの異なる交易会社地域の5つの州を所有している。"
+ trade_company_region_abroad_tooltip:2 "Own §Y5§! provinces across §Y3§! different §YTrade Company Regions§! each that are not on the same continent as your capital."
  eng_establish_trade_in_home_cot_title:1 "海峡の独占"
  claiming_orkney_title:1 "北部諸島を請求"
  nw_modern.tooltip:0 "隣国が以下の条件を満たす：\n§Y封建制§!を受容している\n技術の先行が§Y1§!未満"
@@ -1989,3 +1989,7 @@
  port_jesuits_alternative_tooltip:1 "自国または従属国（非朝貢国）が§Yブラジル植民地方§!で、宗教が§Y[Root.Religion.GetName]§!の州を§Y20§!州領有する"
  unite_home_region_ct:0 "§Y[Root.Capital.GetRegionName]§!地方の州がすべて§Y[Root.GetName]§!に領有されている。"
  gc_cas_spa_potosi_tt:0 "[809.GetName]を領有する従属国が§Y[809.GetName]§!に§Y遷都§!します。"
+ gc_cas_spa_reconquista_one_ct:0 "§Y[Root.GetName]§! gains §YRestoration of Union§! Casus Belli on §Y[POR.GetName]§! if the mission '§YSubjugate Navarra§!' has been completed before."
+ gc_cas_spa_reconquista_one_bt:0 "§Y[Root.GetName]§! gains a permanent claim on the areas of §YBeiras§! and §YAlentejo§! if the mission '§YSubjugate Navarra§!' has been completed before."
+ gc_cas_spa_navarra_ct:0 "§Y[Root.GetName]§! gains §YRestoration of Union§! Casus Belli on §Y[POR.GetName]§! if the mission '§YReclaim Andalucia§!' has been completed before."
+ gc_cas_spa_navarra_bt:0 "§Y[Root.GetName]§! gains a permanent claim on the areas of §YBeiras§! and §YAlentejo§! if the mission '§YReclaim Andalucia§!' has been completed before."
