--- a/source/localisation/subscription_l_english.yml
+++ b/source/localisation/subscription_l_english.yml
@@ -59,7 +59,7 @@
  SUB_VIEW_LOADING:0 "ロード中"
  SUB_VIEW_WAITING_ON_RESPONSE_TITLE:0 "応答を待っています。"
  SUB_VIEW_WAITING_ON_RESPONSE_DESC:0 "サーバからの応答を待っています。\nお待ちください…"
- SUB_ACTIVE_UNSUBSCRIBED:0 "本サービスのサブスクリプションを解除しました。\n\n"
+ SUB_ACTIVE_UNSUBSCRIBED:0 "You have successfully unsubscribed from this service.\n\n"
  SUB_ACTIVE_SUBSCRIBED_NEWLY:0 "おめでとうございます、サブスクリプションが完了しました！\n\n"
  RESTART:0 "再起動"
  PURCHASE:0 "購入"
@@ -81,9 +81,19 @@
  SUB_VIEW_TYPE_6_MONTHS_NOPRICE:0 "6ヶ月"
  SUB_VIEW_SAVING:0 "$PERCENTAGE$％割引"
  SUB_VIEW_THIRD_PARTY:0 "Sabaton音楽パックを有効にします。Twitchや同様のプラットフォームで配信する際はこのオプションを無効にしてください（再起動が必要です）"
- SUB_MESSAGE_1_month_TITLE:0 "$PRICE$で全てのDLCにアクセス！"
- SUB_MESSAGE_1_month_DESC:0 "月額料金でこれまでEuropa Universalis IV向けにリリースされた全てのDLCを手に入れよう。\n\nサブスクリプションはいつでも解除できます。"
- SUB_MESSAGE_3_months_TITLE:0 "わずか$PRICE$で3ヶ月間全てのDLCにアクセス"
- SUB_MESSAGE_3_months_DESC:0 "3ヶ月ごとの継続料金でこれまでEuropa Universalis IV向けにリリースされた全てのDLCを手に入れよう。\n\nサブスクリプションはいつでも解除できます。"
- SUB_MESSAGE_6_months_TITLE:0 "わずか$PRICE$で6ヶ月間全てのDLCにアクセス"
- SUB_MESSAGE_6_months_DESC:0 "6ヶ月ごとの継続料金でこれまでEuropa Universalis IV向けにリリースされた全てのDLCを手に入れよう。\n\nサブスクリプションはいつでも解除できます。"
+ SUB_MESSAGE_subscription_TITLE:0 "Subscription now available on Steam"
+ SUB_MESSAGE_subscription_DESC:0 "A subscription to Europa Universalis IV will give you access to all expansions and other content for a low monthly price. Subscriptions are now only available on the Europa Universalis IV Steam store page."
+ SUB_MESSAGE_migration_prep_TITLE:0 "Subscription is moving to Steam!"
+ SUB_MESSAGE_migration_prep_DESC:0 "Your subscription is still active but because the service is moving to Steam your current subscription will not be renewed after its expiration date.\nWe will notify you when your subscription is about to expire so that, you may renew it through Steam. Until that time, keep enjoying Europa Universalis 4 with all its DLC!"
+ SUB_MESSAGE_migration_cta_TITLE:0 "Subscribe through Steam to keep your subscription!"
+ SUB_MESSAGE_migration_cta_DESC:0 "We have moved the subscription service to Steam. Your previous subscription has expired and will not be renewed. Access Steam and choose the subscription plan there if you want to keep playing with all included Europa Universalis 4 content (DLC)."
+ SUB_MESSAGE_NO_ACTION:0 "OK"
+ GOTO_STEAM:0 "Go to Steam"
+ VIEW_SUBSCRIPTION:0 "View subscription"
+ SUB_BANNER_NEW_SUB_INACTIVE:0 "Subscribe to all DLC ever released!"
+ SUB_BANNER_NEW_SUB_ACTIVE:0 "Subscription is active!"
+ SUB_BANNER_BUTTON_VIEW_NEW_SUB_INACTIVE:0 "Go to Steam"
+ SUB_BANNER_BUTTON_VIEW_NEW_SUB_ACTIVE:0 "Manage"
+ SUB_VIEW_HEADER_ACTIVE_NEW:0 "Subscription is moving to Steam"
+ SUB_VIEW_MAIN_TEXT_ACTIVE_NEW:0 "We're moving subscription to Steam. Your current subscription will be active until the current expiration date but won't be renewed automatically.\n\nWe will remind you when your subscription is over. Please don't subscribe to the new subscription now, to avoid having two subscriptions simultaneously."
+ SUB_VIEW_THIRD_PARTY_SHORT:0 "Sabaton music"
