--- a/source/localisation/tutorial_l_english.yml
+++ b/source/localisation/tutorial_l_english.yml
@@ -124,7 +124,7 @@
  TUT_BAS_CHAPTER04_TITLE:0 "戦争"
  TUT_BAS_CHAPTER04_DESC:0 "チュートリアルのこの章は、§M戦争§!と§M外交§!に焦点を当てます。"
  TUT_BAS_CHAPTER04_PAGE01_TITLE:1 "宣戦布告"
- TUT_BAS_CHAPTER04_PAGE01_TEXT:0 "宣戦布告には§M開戦事由§!が必要です。開戦事由または戦争に対する正当性を持っていない場合に宣戦を布告するとペナルティを受けます。\n\n§Y§Mレンスター§Yの州をクリックしてください。その後§M外交§Yをクリックして§M宣戦布告§Yを選択。戦争目標として§Mレンスターの占領§Yを選び§M宣戦布告§Yをクリックしてください。§W"
+ TUT_BAS_CHAPTER04_PAGE01_TEXT:1 "When you Declare War on a target you want to have a §MCasus Belli§! on them. If you do not have a Casus Belli, or justification for war, you will suffer negative effects from declaring war on them.\nIf you right click the §MLeinster§! province you will notice the §MDeclare War§! button. When you click on it you will see that you only have the option of §RNo Casus Belli§!.\nFortunately, your nation has a §MCore§! on the Leinster province, which will grant you a §MCasus Belli§! to take it. However, like many other elements of the game, the Casus Belli will be updated after running the game a few ingame days.\n\n§YUnpause the game for a few days, then click the §MLeinster§Y province, then click §MDiplomacy§Y and select §MDeclare War§Y. Select the Conquest Casus Belli with §MTake Leinster§Y as War Goal and then click §MDeclare War§Y.§W"
  TUT_BAS_CHAPTER04_PAGE01_OBJECTIVES:0 "レンスターに§M宣戦布告§!してください。"
  TUT_BAS_CHAPTER04_PAGE02_TITLE:1 "戦争"
  TUT_BAS_CHAPTER04_PAGE02_TEXT:0 "レンスターの州に軍隊を移動させてください。また包囲と占領も完了させてください。全ての軍隊を連れて行きたければ、複数の軍隊を1つに統合して船で運んでください。\n\n§Y一時停止の解除を忘れないでください。§!"
@@ -202,7 +202,7 @@
  TUT_ADV_CHAPTER02_PAGE03_TEXT:0 "交易マップモードは、どの州がどの交易区に属しているのかであったり、交易品の流れを表示します。それに加えて、どの方向に交易力を流すのかを商人に対して指定することができます。§M交易力の移動§!については後ほど学びます。"
  TUT_ADV_CHAPTER02_PAGE03_OBJECTIVES:0 "§M次へ§!をクリックして続ける。"
  TUT_ADV_CHAPTER02_PAGE04_TITLE:1 "帝国マップモード"
- TUT_ADV_CHAPTER02_PAGE04_TEXT:0 "帝国マップモードは、どの州が§M神聖ローマ帝国§!に属しているかを示します。緑の州が帝国のものであり、オレンジは選帝侯の、紫は皇帝のものであることを示します。ヴェネツィアのものであるブレシアが帝国の州であることに気づきましたよね？"
+ TUT_ADV_CHAPTER02_PAGE04_TEXT:1 "The Imperial Mapmode shows which provinces belong to the §MHoly Roman Empire§!. Green provinces are imperial provinces, orange are the Electors, blue are the Free Cities and purple is the Emperor. You may notice that one of your provinces (Brescia) belong to the empire, while you as Venice, do not."
  TUT_ADV_CHAPTER02_PAGE04_OBJECTIVES:0 "§M次へ§!をクリックして続ける。"
  TUT_ADV_CHAPTER02_PAGE05_TITLE:1 "宗教マップモード"
  TUT_ADV_CHAPTER02_PAGE05_TEXT:0 "宗教マップモードは世界中の宗教分布を示します。これにより、どの州が§M国教§!を信仰していないかや、同朋や仇敵がどこにいるかを簡単に確認できます。"
