Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -762,7 +762,7 @@
  aow_events.48.a:0 "我々を助けてくれる者に対して、我々は何でもする。"
  aow_events.48.b:0 "我々の統治には、縁故主義以外に優先事項がある。"
  aow_events.49.t:0 "枢機卿大臣"
- aow_events.49.d:0 "[Root.GetName]の枢機卿の一人は、行政官として優れた技術を持つことが判明しておりおり、すでに[Root.Monarch.GetTitle]に役立つ助言を提供している。ここで彼を政府の大臣にすることは形式的なものに過ぎないが、それでも重要な形式だ。なぜなら、彼はより強力に成長する可能性があるからだ。我々に仕える枢機卿がいれば、教皇が我々に信頼を寄せることは間違いなく、何よりもまず[Root.GetName]がカトリック国家であるという根拠を強化するだろう。"
+ aow_events.49.d:0 "[Root.GetName]の枢機卿の一人は、行政官として優れた技術を持つことが判明しており、すでに[Root.Monarch.GetTitle]に役立つ助言を提供している。ここで彼を政府の大臣にすることは形式的なものに過ぎないが、それでも重要な形式だ。なぜなら、彼はより強力に成長する可能性があるからだ。我々に仕える枢機卿がいれば、教皇が我々に信頼を寄せることは間違いなく、何よりもまず[Root.GetName]がカトリック国家であるという根拠を強化するだろう。"
  aow_events.49.a:0 "彼は今まで我々をよく助けている。さっさと形式を整えよう。"
  aow_events.49.b:0 "[Root.Monarch.GetName]は[Root.GetName]を支配するのに彼の助言など必要としない。"
  aow_events.50.t:0 "枢機卿の政策への貴族達の反発"
@@ -2332,7 +2332,7 @@
  accepted_claim_on_neighbor:0 "隣国で受け入れられた主張"
  rejected_claim_on_neighbor:0 "隣国で拒否された主張"
  REMOVE_ELECTORATE_NO_OFFICIAL_RELIGION:0 "帝国の公式宗教が定まらない限り、選帝侯を解任することはできません。"
- AUTO_TRANSPORT_NO_COG:2 "You need transport ships in order to transport troops with this fleet."
+ AUTO_TRANSPORT_NO_COG:2 "艦隊で部隊を輸送するのに輸送船が必要です。"
  flavor_vij.20.t:0 "帝都チャールキヤ"
  flavor_vij.20.d:0 "滅亡から長い年月が経過しているが、デカンからタミル王国まで至るチャールキヤ帝国は人々の記憶に強く残っている。我々の帝国が拡大と発展を続けたことで、詩人や年代史家はヴィジャヤナガルをチャールキヤ帝国の生まれ変わりのように記録する。かつてバフマニー朝の首都だったビーダルから離れていない古代チャールキヤの首都カリアーナを獲得したことで我々はチャールキヤの遺産を我々のものとして請求できるように宮廷を北部都市に移転する機会を得た。\n\nヴィジャヤナガルの伝統的な首都、勝利の都市は偉大で有望な都市であり、我々独自の帝国の遺産を築くことができるでしょう。"
  flavor_vij.20.a:0 "首都は勝利の都のままでいい。"
@@ -2359,4 +2359,4 @@
  incan_nation_empire_custom_tooltip:0 "§Y[Root.GetName]§!の政府ランクが§Y帝国§!に変わります。"
  TRADE_COMPANY_MOLUCCAS_Indonesia_Trade_Company:0 "モルッカ交易会社"
  REVOLUTIONARY_SHORT_NAME:0 "革命$NAME$"
- nivkh:0 "Nivkh"
+ nivkh:0 "ニヴフ"
