--- a/source/localisation/00_lanfang_l_english.yml
+++ b/source/localisation/00_lanfang_l_english.yml
@@ -265,7 +265,7 @@
  majapahit.1.b:0 "その罪により彼奴を追放せよ。"
  damarwulan_tt:0 "§Yダマルウラン§!は、§Yマジャパヒト§!の敵国との戦いにおいて、§Y5§!回勝利しなければならない。"
  majapahit.2.t:0 "ダマルウランの勝利"
- majapahit.2.d:1 "It never gets any easier. Rotten blood still reeks as one's own, the enemies' eyes are still human eyes, the night before the battle still keeps Damarwulan wide awake.\nThe battle ends victoriously, like any other battle has before for him. This is the fifth battle, and he wishes five is the final number. When he returns to court, he is received with the greatest of honors, his name repeated so many times that he forgets it is his name and thinks it is just another word for \"victory\". [Root.Monarch.GetName] approaches him, [Root.Monarch.GetHerHis] heart filled with joy. \"Young Damarwulan,\" [Root.Monarch.GetSheHe] says, \"you are not that young anymore.\""
+ majapahit.2.d:1 "それは決して簡単なことではありません。腐った血の匂いは未だに自身に纏いつき、敵の目は人の目のままです。戦いの前夜、ダマルウランはずっと眠れず覚醒していました。\nこれまでの戦いと同様に、戦いは勝利で終わりました。これが5度目の戦闘で、彼は5という数字が最後の数字になることを願っています。彼が宮廷に戻ると、最高の栄誉で歓待を受けました。彼の名は何度も繰り返され、その繰り返される頻度といったら、彼は繰り返される言葉が自分の名であることを忘れて、「勝利」の意味で使われている言葉なんじゃないかと考えるほどでした。[Root.Monarch.GetName]は彼に近づきます。君主の心は喜びに溢れています。「青年、ダマルウランよ」君主はこう続けました。「君はもはや青二才ではない」"
  majapahit.2.a:0 "彼を伴侶に迎え入れましょう。"
  majapahit.2.b:0 "彼を[Root.GetName]の後継者に迎え入れましょう"
  majapahit.2.c:0 "彼に大いなる名誉を与えよう。"
@@ -696,8 +696,8 @@
  have_private_enterprise_tt:0 "§Y私企業§!の従属国を有する。"
  have_self_governing_colony_tt:0 "§Y自治植民地§!の従属国を有する。"
  TRIBAL_LEADER_fem:0 "部族の指導者"
- ming_crisis.11.t:0 "[ming_disaster_new_tag.GetName] Separatists rise up in [ming_disaster_nationalist_province.GetName]!"
- ming_crisis.11.d:0 "A group of [ming_disaster_new_tag.GetName] rebels has the audacity to question the authority of our [Root.Monarch.GetTitle], and claim we are no longer the descedants of heaven! They prepared a threatening force in [ming_disaster_nationalist_province.GetName] are now in open revolt against us!"
- ming_crisis.11.a:0 "They need to be striked down immediately!"
- ming_crisis.11.b:0 "Maybe a few concessions might appease them..."
- lanfang_decision_formation_desc:0 "Chinese mining collectives are eager to begin exploting the gold mines of Borneo. We should allow them to set up self-governing communities so that they can perform their work most effectively."
+ ming_crisis.11.t:0 "[ming_disaster_new_tag.GetName]の分離独立派が[ming_disaster_nationalist_province.GetName]で蜂起！"
+ ming_crisis.11.d:0 "[ming_disaster_new_tag.GetName]の反逆者の集団は厚かましくも我が[Root.Monarch.GetTitle]の権威を疑うようになり、天命は失われたと主張している！彼らは[ming_disaster_nationalist_province.GetName]にて不穏な軍を準備し、今や我々に対して公然と反旗を翻している！"
+ ming_crisis.11.a:0 "すぐさま討伐せねばならぬ！"
+ ming_crisis.11.b:0 "多少譲歩すれば、彼らをなだめられるかもしれない……"
+ lanfang_decision_formation_desc:0 "中国の採掘家たちはボルネオ島の金鉱の採掘を始めようとしている。彼らが最も効果的に仕事ができるように、自治権のあるコミュニティを設立することを認めるべきだろう。"
