--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -755,8 +755,8 @@
  IME_ADJ:0 "イメレティ"
  TAB:1 "マーザンダラーン"
  TAB_ADJ:1 "マーザンダラーン"
- MYR:1 "Xibe"
- MYR_ADJ:1 "Xiben"
+ MYR:1 "シベ"
+ MYR_ADJ:1 "シベ"
  MHX:0 "海西女真"
  MHX_ADJ:0 "海西女真"
  KRC:0 "ホルチン"
