--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -234,11 +234,11 @@
  SOL_ADJ:0 "ソロン"
  NVK:0 "ニヴフ"
  NVK_ADJ:0 "ニヴフ"
- EJZ:2 "Nanai"
- EJZ_ADJ:2 "Nanai"
- NHX:3 "Orochoni"
- NHX_ADJ:2 "Orochoni"
- manchu_manchuria_decision.tooltip:1 "Is core provinces with §YJurchen§! or §YManchu§! culture."
+ EJZ:2 "ナナイ"
+ EJZ_ADJ:2 "ナナイ"
+ NHX:3 "オロチ"
+ NHX_ADJ:2 "オロチ"
+ manchu_manchuria_decision.tooltip:1 "§Y女真§!文化もしくは§Y満州§!文化の中核州が存在する。"
  desc_repaired_great_wall:0 "北狄の侵入を防ぐため、万里の長城の修復に取り組んでいる。"
  flavor_oir.1.t:0 "土木の変"
  flavor_oir.1.d:0 "オイラトとの衝突が開戦へと発展し、皇帝は軽率にも明軍を自ら率いることを決断しました。軍事的才能に欠け、顧問たちが警告するにもかかわらず、皇帝は先頭に立つ決意を固めています。"
@@ -557,8 +557,8 @@
  PROV_ADJ4676:1 "バダイン・ジャラン"
  PROV4677:1 "ノヨン"
  PROV_ADJ4677:1 "ノヨン"
- PROV4678:2 "Qaraqorum"
- PROV_ADJ4678:2 "Qaraqorumian"
+ PROV4678:2 "カラコルム"
+ PROV_ADJ4678:2 "カラコルム"
  PROV4679:1 "フブスグル"
  PROV_ADJ4679:1 "フブスグル"
  PROV4680:1 "ザハチン"
