--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -519,7 +519,7 @@
  WE_TRADE_FAVORS_FOR_GOLD_HEADER:0 "$MESSENGER$"
  WE_TRADE_FAVORS_FOR_GOLD_1:0 "好感度とダカットの取引"
  WE_TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$RECIPIENT$に、"
- WE_TRADE_FAVORS_FOR_GOLD_3:1 "give us $PERCENT$% of their yearly income ($CASH|Y$¤)"
+ WE_TRADE_FAVORS_FOR_GOLD_3:1 "年収の$PERCENT$%の金銭（$CASH|Y$¤）を"
  WE_TRADE_FAVORS_FOR_GOLD_4:0 "提供してくれるよう求めました。"
  WE_TRADE_FAVORS_FOR_GOLD_LOG:0 "$RECIPIENT$に好感度を使いダカットを求める"
  WE_TRADE_FAVORS_FOR_GOLD_BTN1:0 "OK"
@@ -530,7 +530,7 @@
  TRADE_FAVORS_FOR_GOLD_HEADER:0 ""
  TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
- TRADE_FAVORS_FOR_GOLD_3:1 "Asked us for $PERCENT$% of our yearly income ($CASH|Y$¤)"
+ TRADE_FAVORS_FOR_GOLD_3:1 "年収の$PERCENT$%の金銭（$CASH|Y$¤）を"
  TRADE_FAVORS_FOR_GOLD_4:0 "求めてきました。"
  TRADE_FAVORS_FOR_GOLD_5:0 "盟友のお役に立てて嬉しいです！"
  TRADE_FAVORS_FOR_GOLD_LOG:0 "$ACTOR$、我々に好感度を使いダカットを求める"
@@ -1468,54 +1468,54 @@
  MODIFIER_MONTHLY_PIETY_ACCELERATOR:0 "毎月の信仰心促進"
  CANNOT_COLONIZE_CUT_OFF:0 "The closest neighbour ($PROVINCE$) is cut off from our capital."
  HRE_VOTE_INELIGIBLE_DOESNT_EXIST:0 "$COUNTRY|Y$ does not exist."
- JEWISH_ASPECTS_POWER_NAME:0 "Faith Power"
- PROTESTANT_ASPECTS_POWER_NAME:0 "Church Power"
- ANGLICAN_ASPECTS_POWER_NAME:0 "Church Power"
+ JEWISH_ASPECTS_POWER_NAME:0 "信仰力"
+ PROTESTANT_ASPECTS_POWER_NAME:0 "教会権力"
+ ANGLICAN_ASPECTS_POWER_NAME:0 "教会権力"
  LOSING_GP_POWER_PROJECT:0 "Clinging on to Great Power status"
  TRADE_MERCHANT_ALREADY_COLLECTING:0 "$ENVOY$ is already collecting from trade here."
  TRADE_MERCHANT_ALREADY_TRANSFERRING:0 "$ENVOY$ is already transferring Trade Power here."
- recently_changed_religion_dummy:0 "Recently changed Religion"
- REBELS_ABANDON_CAUSE_TITLE:0 "Rebels Abandon Cause"
- REBELS_ABANDON_CAUSE_SETUP:0 "When a group of rebels put down their weapons."
- REBELS_ABANDON_CAUSE_HEADER:0 "Rebels Abandon Cause"
- REBELS_ABANDON_CAUSE_1:0 "$REBELTYPE$ abandon revolt."
+ recently_changed_religion_dummy:0 "最近宗教を変更した"
+ REBELS_ABANDON_CAUSE_TITLE:0 "反乱軍が大義を失う"
+ REBELS_ABANDON_CAUSE_SETUP:0 "反乱軍が武器を置いたとき。"
+ REBELS_ABANDON_CAUSE_HEADER:0 "反乱軍が大義を失う"
+ REBELS_ABANDON_CAUSE_1:0 "$REBELTYPE$が反乱をやめる。"
  REBELS_ABANDON_CAUSE_2:0 "The $REBELTYPE$ in $PROVINCE$ do not have enough troops to maintain their island siege and have put down their weapons and gone home."
- REBELS_ABANDON_CAUSE_LOG:0 "$REBELTYPE$ abandon revolt."
+ REBELS_ABANDON_CAUSE_LOG:0 "$REBELTYPE$が反乱をやめる。"
  REBELS_ABANDON_CAUSE_BTN1:0 "OK"
  REBELS_ABANDON_CAUSE_BTN2:0 "OK"
  REBELS_ABANDON_CAUSE_BTN3:0 "Go to"
  NO_DEVASTATION_SOME_PROSPERITY_MAP_TT:0 "$NAME|Y$ is not devastated, and is $VAL|0&$ towards prosperity."
- DIPIRO_GUARANTEED_BY_DATE:0 "Guaranteed by $NAME|Y$ until $DATE|Y$."
- DIPIRO_GUARANTEE_DATE:0 "Guaranteeing independence of $NAME|Y$ until $DATE|Y$."
- fallback_wargoal:0 "Show Superiority"
- fallback_wargoal_desc:0 "War goal is to show them superiority by winning battles."
- take_capital_revolution:0 "Take Capital"
- take_capital_revolution_desc:0 "War goal is to take the capital."
- take_capital_pirates:0 "Take Capital"
- take_capital_pirates_desc:0 "War goal is to take the capital."
- superiority_world_crusade:0 "Show Superiority"
- superiority_world_crusade_desc:0 "War goal is to show them superiority by winning battles."
- war_goal_peasants_change_government:0 "Take Capital"
- war_goal_peasants_change_government_desc:0 "War goal is to take the capital."
- take_capital_support_rebels:0 "Take Capital"
- take_capital_support_rebels_desc:0 "War goal is to take the capital."
- superiority_religious_league:0 "Show Superiority"
- superiority_religious_league_desc:0 "War goal is to show them superiority by winning battles."
- take_capital_take_mandate:0 "Take Capital"
- take_capital_take_mandate_desc:0 "War goal is to take the capital."
- take_capital_force_join_hre:0 "Take Capital"
- superiority_reichskrieg:0 "Show Superiority"
- superiority_reichskrieg_desc:0 "War goal is to show them superiority by winning battles."
- take_capital_vassalize_maj:0 "Take Capital"
- take_capital_vassalize_maj_desc:0 "War goal is to take the capital."
- superiority_sword_of_islam:0 "Show Superiority"
- superiority_sword_of_islam_desc:0 "War goal is to show them superiority by winning battles."
- force_migration:0 "Take Capital"
- force_migration_desc:0 "War goal is to take the capital."
- take_native_american_land:0 "Show Superiority"
- push_back_colonizers:0 "Show Superiority"
- push_back_colonizers_desc:0 "War goal is to show them superiority by winning battles."
- CANNOT_MOVE_GREAT_PROJECT_FROM_SUBJECT_TYPE:0 "Cannot move Great Projects from $SUBJECTTYPES$."
+ DIPIRO_GUARANTEED_BY_DATE:0 "$NAME|Y$によって独立を$DATE|Y$まで保障されています。"
+ DIPIRO_GUARANTEE_DATE:0 "$NAME|Y$の独立を$DATE|Y$まで保障しています。"
+ fallback_wargoal:0 "優位性を示す"
+ fallback_wargoal_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ take_capital_revolution:0 "首都の占領"
+ take_capital_revolution_desc:0 "戦争の目標は首都を占領することです。"
+ take_capital_pirates:0 "首都の占領"
+ take_capital_pirates_desc:0 "戦争の目標は首都を占領することです。"
+ superiority_world_crusade:0 "優位性を示す"
+ superiority_world_crusade_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ war_goal_peasants_change_government:0 "首都の占領"
+ war_goal_peasants_change_government_desc:0 "戦争の目標は首都を占領することです。"
+ take_capital_support_rebels:0 "首都の占領"
+ take_capital_support_rebels_desc:0 "戦争の目標は首都を占領することです。"
+ superiority_religious_league:0 "優位性を示す"
+ superiority_religious_league_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ take_capital_take_mandate:0 "首都の占領"
+ take_capital_take_mandate_desc:0 "戦争の目標は首都を占領することです。"
+ take_capital_force_join_hre:0 "首都の占領"
+ superiority_reichskrieg:0 "優位性を示す"
+ superiority_reichskrieg_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ take_capital_vassalize_maj:0 "首都の占領"
+ take_capital_vassalize_maj_desc:0 "戦争の目標は首都を占領することです。"
+ superiority_sword_of_islam:0 "優位性を示す"
+ superiority_sword_of_islam_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ force_migration:0 "首都の占領"
+ force_migration_desc:0 "戦争の目標は首都を占領することです。"
+ take_native_american_land:0 "優位性を示す"
+ push_back_colonizers:0 "優位性を示す"
+ push_back_colonizers_desc:0 "戦争の目標は戦闘に勝利して優位性を示すことです。"
+ CANNOT_MOVE_GREAT_PROJECT_FROM_SUBJECT_TYPE:0 "$SUBJECTTYPES$からは大事業は移動できません。"
  TRADE_COMPANY_AUTONOMY_MODIFIERS:0 "It will also have the following effects, modified by Local Autonomy (currently $AUTONOMY|%1R$):"
  OVERLORD_NAVAL_FORCE_LIMIT_MODIFIER:0 "Overlord Naval Force Limit Modifier"
  mechanic_can_change_primary_culture_no:0 "Forbids changing the Primary Culture."
