--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -279,7 +279,7 @@
  IS_NOT_SEA_ZONE:0 "陸である"
  IS_SEA_ZONE:0 "海である"
  DYNASTY_CHANGE:0 "$WHO$が$NEW$になります\n"
- IS_NOT_STRONGEST_TRADE_POWER:1 "$WHO|Y$ is NOT the strongest trade power in $WHERE|Y$."
+ IS_NOT_STRONGEST_TRADE_POWER:1 "$WHO|Y$の交易力が$WHERE|Y$で最も強い交易力ではない。"
  HAS_NOT_MORE_TRADE_POWER:0 "$WHO|Y$の交易力が$VAL$%未満である。"
  HAS_NOT_MORE_PRIVATEERS:0 "$WHO|Y$の私掠海賊がその地域で持つ交易力が§Y$VAL$%§!未満である。"
  HAS_SAME_OR_MORE_PRIVATEERS:0 "$WHO|Y$の私掠海賊がその地域で持つ交易力が§Y$VAL$%§!以上である。"
@@ -287,7 +287,7 @@
  HAS_NOT_PRIVATEERS_IN_ANY_NODE:0 "$WHO|Y$は私掠海賊をどのノードにも持っていない。"
  HAS_ACTIVE_FERVOR:0 "$WHO|Y$が宗教的情熱の効果を発動している。"
  HAS_NOT_ACTIVE_FERVOR:0 "$WHO|Y$が宗教的情熱の効果を発動していない。"
- IS_STRONGEST_TRADE_POWER:1 "$WHO|Y$ is the strongest Trade Power in $WHERE|Y$."
+ IS_STRONGEST_TRADE_POWER:1 "$WHO|Y$は$WHERE|Y$の中で最も高い交易力である。"
  IS_NOT_MOST_TRADE_POWER_PROVINCES:0 "§Y$WHO$§Wは最も多い州交易力を持っていない。"
  IS_MOST_TRADE_POWER_PROVINCES:0 "§Y$WHO$§Wは最も多い州交易力を持っている。"
  ANY_TRADE_NODE_TR:0 "いずれかの交易ノード"
