Save/Update files [ci skip]

--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1476,7 +1476,7 @@
  BLOCK_OFFENSIVE_WARS_ENABLE_DESC:1 "§Y$COUNTRY$§!に対し我々は彼らの攻撃的な戦争に参加しないことを伝えます。これはまた好感度の蓄積を止め、彼らがあなたなしでも管理できると考えれば、同盟を終了する可能性があります。クリックすると再び攻撃的な戦争に参加することを伝えます。"
  AI_WANTS_PROVINCES:0 "\n\n$WHO|Y$は以下の州に関心を持っています：$LIST$。"
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
- EST_VAL_ALLIANCE_ON_VC:2 "Victory Card in Allied territory ($NAME$): §R$VAL|1$%§!"
+ EST_VAL_ALLIANCE_ON_VC:2 "同盟テリトリーでの勝利カード（$NAME$）：（全角）§R$VAL|1$%§!"
  FAVORS_GAIN_TOOLTIP:1 "以下の要因により毎月$VAL|+=2$の好感度を獲得します：\n$WHY$"
  FAVOR_ALLIANCE_TT:0 "同盟軍：相対的兵力：$VAL|+=2$"
  FAVOR_ALLIANCE_BLOCKED_TT:0 "攻撃側戦争の拒否：$VAL|+=2$"
@@ -1497,8 +1497,8 @@
  estate_warriors:0 "戦士"
  estate_mani:0 "マニ"
  estate_pochteca:0 "ポチテカ"
- gain_access_to_estate_dhimmi_title:0 "Establish the Dhimmi Estate"
- gain_access_to_estate_dhimmi_desc:0 "With our expansion the number of unhandled heathens grows in our [Root.GovernmentName]. We should establish an internal political entity which purpose is to deal with the heathens."
- brahmin_estate_is_not_in_power_tt:0 "The §YBrahmins§! are NOT in power."
- gain_dhimmi_estate_tt:0 "[Root.GetName] gains access to the §YDhimmi§! estate."
- lose_access_to_brahmins_tt:0 "[Root.GetName] loses access to the §YBrahmins§! estate."
+ gain_access_to_estate_dhimmi_title:0 "ズィンミー階級の設立"
+ gain_access_to_estate_dhimmi_desc:0 "自国の拡大に合わせて、[Root.GovernmentName]内に扱いきれないほどの異教徒が増えている。異教徒への対応を目的とした内部政治組織を設立すべきだろう。"
+ brahmin_estate_is_not_in_power_tt:0 "§Yバラモン§!は権力を握っていない。"
+ gain_dhimmi_estate_tt:0 "[Root.GetName]は§Yズィンミー§!階級を利用できるようになる。"
+ lose_access_to_brahmins_tt:0 "[Root.GetName]は§Yバラモン§!階級を利用できなくなる。"
