--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -777,6 +777,6 @@
  flavor_kor.14.a:0 "Accept the request"
  flavor_kor.14.a.tt:0 "Every owned province in the §YKorea§! region gets returned to §Y[KOR.GetName]§!."
  flavor_kor.14.b:0 "Refuse the request"
- flavor_mch.EVTNAME8:0 "The Rise of Manchuria"
- flavor_mch.EVTDESC8:0 "The Jurchen of the Manchuria region were always loyal tributaries to [Root.GetName]. They knew their place and served us.\nThis attitude made a substantial change recently however. While we were content with their annual tributary, the Jurchen consolidated their region, subjugated the fellow tribes and united to a single horde, which now lusts for conquest!"
- flavor_mch.EVTOPTA8:0 "May the heaven have mercy on us."
+ flavor_mch.EVTNAME8:0 "満州の勃興"
+ flavor_mch.EVTDESC8:0 "満州地域の女真族は、いつも[Root.GetName]に忠実な朝貢国であった。身の程を弁え、我々に仕えていたのだ。\nしかし、最近ではその態度が大きく変わりつつある。我々が年貢を貰って満足している間に、征服欲溢れる女真族は他部族を征服し、地域と部族を一つにまとめ上げたのだ。"
+ flavor_mch.EVTOPTA8:0 "天の慈悲があらんことを。"
