Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -5056,8 +5056,8 @@
  MONARCH_NATIONAL_FOCUS_CHANGED:0 "ナショナルフォーカスを$VAR$に変更する"
  ROM_parliament_name:0 "Senate"
  BYZ_parliament_name:0 "Senate"
- amur_estuary_modifier:0 "Amur Estuary"
- desc_amur_estuary_modifier:0 "Controlling the important river estuary of the Amur River strengthens our hold of the trade in the region."
+ amur_estuary_modifier:0 "アムール河口"
+ desc_amur_estuary_modifier:0 "重要河川であるアムール川の河口を支配することで、我々はこの地方の交易に対する影響力を強化できる。"
  COLONIAL_EASTERN_AMERICA_Miju:0 "美州"
  COLONIAL_EASTERN_AMERICA_Miju_ADJ:0 "美州"
  COLONIAL_AUSTRALIA_Hoju:0 "濠州"
