--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -319,7 +319,7 @@
  estate_nobles_supremacy_over_crown_effect_tooltip:0 "§Y階級§!は§Y議会§!が召集されなくても§Y議題§!を出す事ができます。"
  estate_church_for_the_faith_effect_tooltip:3 "異端または異教との戦争時の陸軍士気：§G+5%§!\n\n15年間異端または異教と平和状態の場合の陸軍士気：§R-5%§!\n\n§Y 一度に発動するのは2つの士気補正の内、1つのみである。§!"
  estate_brahmins_for_the_faith_effect_tooltip:3 "異端または異教との戦争時の陸軍士気：§G+5%§!\n\n15年間異端または異教と平和状態の場合の陸軍士気：§R-5%§!\n\n§Y 一度に発動するのは2つの士気補正の内、1つのみである。§!"
- estate_brahmins_flexible_deities_revoke_tooltip:2 "The decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy (or its equivalent for other governments) will be disabled."
+ estate_brahmins_flexible_deities_revoke_tooltip:2 "§Y25§!の正統性（もしくは他政体における正統性に相当するもの）を消費することで、§Y20§!年ごとに個人の主神を変更するという決断を無効にします。"
  estate_maratha_levies:0 "徴兵の拡大"
  estate_maratha_levies_for_muslims:0 "マラーター動員数の増加"
  estate_maratha_levies_for_muslims_effect_tooltip:1 "§Yヒンドゥー教§!の領有州はすべて、§Y「マラーター徴兵の増加」§!を獲得し、以下の効果を得ます：\n州人的資源補正：§G+30.0%§!"
@@ -1241,11 +1241,11 @@
  no_other_mil_privilege:0 "§Y月間軍事力§!を付与する他の階級特権がない"
  desc_increase_crown_land_share:0 "土地の所有権を王家側へ集中させることで、広範に及ぶ階級の権力をさらにうまく管理できるようになる。"
  estate_dhimmi_increase_autonomy_in_province_x_tooltip:0 "[agenda_province.GetName]州の自治度が10%以上減少する｡"
- estate_maratha_subject_rights:0 "Subject Rights"
- estate_rajput_subject_rights:0 "Subject Rights"
- estate_dhimmi_grant_liberties:0 "Grant [Root.GetDhimmiName] Liberties"
- estate_dhimmi_grant_liberties_desc:0 "The [Root.GetDhimmiName] are a minority faction in our state with the power of the majority of the heathens within our borders. By granting them some liberties we can secure their loyalty to us."
- estate_jains_grant_liberties:0 "Grant [Root.GetJainsName] Liberties"
- estate_jains_grant_liberties_desc:0 "The [Root.GetJainsName] are a minority wihtin our state, but hold a lot of financial power. By granting them some liberties we can secure their loyalty to us."
- estate_maratha_subject_rights_desc:0 "[Root.GetUsableNameCap] is a decentralized state in which remote provinces are governed by subjects with considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
- estate_rajput_subject_rights_desc:0 "[Root.GetUsableNameCap] is a decentralized state in which remote provinces are governed by subjects with considerable independence from the [Root.Monarch.GetTitle]. This system has its benefits but makes maintaining the primacy of royal power a significant challenge."
+ estate_maratha_subject_rights:0 "従属国の権利"
+ estate_rajput_subject_rights:0 "従属国の権利"
+ estate_dhimmi_grant_liberties:0 "[Root.GetDhimmiName]の自由の付与"
+ estate_dhimmi_grant_liberties_desc:0 "[Root.GetDhimmiName]は我が国の少数派であるものの、国内の異教徒の中では最も大きな力を持っている。彼らに幾分かの自由を与えることにより、忠誠を確保することができるだろう。"
+ estate_jains_grant_liberties:0 "[Root.GetJainsName]の自由の付与"
+ estate_jains_grant_liberties_desc:0 "[Root.GetJainsName]は我が国の少数派であるものの、金融の世界では非常に大きな力を持っている。彼らに幾分かの自由を与えることにより、忠誠を確保することができるだろう。"
+ estate_maratha_subject_rights_desc:0 "[Root.GetUsableNameCap]は分権的な国家であり、遠隔地の州は[Root.Monarch.GetTitle]からかなりの独立性を持つ従属国により統治されている。この制度には利点もあるものの、王権の優位性を維持することが大きな課題となる。"
+ estate_rajput_subject_rights_desc:0 "[Root.GetUsableNameCap]は分権的な国家であり、遠隔地の州は[Root.Monarch.GetTitle]からかなりの独立性を持つ従属国により統治されている。この制度には利点もあるものの、王権の優位性を維持することが大きな課題となる。"
