--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -4579,10 +4579,10 @@
  desc_dancing_on_the_knife_good:0 "私たちの外交努力は首尾よくいった。"
  dancing_on_the_knife_bad:0 "ナイフの上で踊る"
  desc_dancing_on_the_knife_bad:0 "私たちの外交努力は失敗した。"
- random_event.EVTDESC2D:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [platinean_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Platinean, and this sentiment is beginning to spread throughout [platinean_province.GetAreaName]."
- random_event.EVTDESC2E:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [quebecois_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Québécois, and this sentiment is beginning to spread throughout [quebecois_province.GetAreaName]."
- random_event.EVTDESC2F:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [louisianans_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Louisianans, and this sentiment is beginning to spread throughout [louisianans_province.GetAreaName]."
- random_event.EVTOPTF2:0 "Embrace Platinean culture."
- random_event.EVTOPTG2:0 "Embrace Québécois culture."
- random_event.EVTOPTH2:0 "Embrace Louisianans culture."
+ random_event.EVTDESC2D:0 "時が経つにつれ、以前の故郷と植民地の間のつながりは弱くなる。[platinean_province.GetName]の定居者たちは、もはや彼ら自身の祖先の故郷に自身を関連付けることはほとんどない。彼らは現在、自身をアメリカ人とみなすことを好んでおり、この感情は[platinean_province.GetAreaName]中に広がり始めている。"
+ random_event.EVTDESC2E:0 "時が経つにつれ、以前の故郷と植民地の間のつながりは弱くなる。[quebecois_province.GetName]の定居者たちは、もはや彼ら自身の祖先の故郷に自身を関連付けることはほとんどない。彼らは現在、自身をアメリカ人とみなすことを好んでおり、この感情は[quebecois_province.GetAreaName]中に広がり始めている。"
+ random_event.EVTDESC2F:0 "時が経つにつれ、以前の故郷と植民地の間のつながりは弱くなる。[louisianans_province.GetName]の定居者たちは、もはや彼ら自身の祖先の故郷に自身を関連付けることはほとんどない。彼らは現在、自身をアメリカ人とみなすことを好んでおり、この感情は[louisianans_province.GetAreaName]中に広がり始めている。"
+ random_event.EVTOPTF2:0 "ラプラタ文化を受け入れる。"
+ random_event.EVTOPTG2:0 "ケベック文化を受け入れる。"
+ random_event.EVTOPTH2:0 "ルイジアナ文化を受け入れる。"
  lunar_new_year:0 "元日"
