--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -13,7 +13,7 @@
  CENTRALIZE_STATE_CONSTRUCTION_SETUP:0 "ステートの集権化が完了したとき"
  CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
  CENTRALIZE_STATE_CONSTRUCTION_2:0 "$PROVINCE$での工事が完了しました。"
- CENTRALIZE_STATE_CONSTRUCTION_3:1 "今、$STATE|Y$はステート集権化されてます。"
+ CENTRALIZE_STATE_CONSTRUCTION_3:1 "今、$STATE|Y$は集権化されています。"
  CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事、完了"
  CENTRALIZE_STATE_CONSTRUCTION_BTN1:0 "OK"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_TITLE:0 "ステートの集権化の中止"
