Save/Update files [ci skip]

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3696,7 +3696,7 @@
  EVTDESC842:0 "我々は、軍隊の品質の基準を引き締める必要があると感じているため、残念ながら、多くの新兵たちの可能性については、任務にふさわしくないと宣言しなければならない。"
  EVTOPTB842A:0 "我々は籾殻から小麦を選り分けなければならない。"
  EVTNAME843:1 "[Root.GetNoblesReplacementForOtherGovernments]の懸念"
- EVTDESC843:1 "我々の軍隊はますます質に重点を置いているため、伝統的な軍隊、第一に彼らに忠実で、国家への忠誠は第二であった、が永遠に失われることへの懸念がある。幸運なことに、彼らは、この新式軍が過度に大きな不平に対して最も強制的な主張を証明することをさらに懸念している…[Root.GetNoblesReplacementForOtherGovernments]は、特に彼らの地位が脅かされる可能性があることを懸念している。"
+ EVTDESC843:1 "我々の軍隊が質に重点を置くようになるにつれ、伝統的な軍隊、すなわち彼ら自身が第一で国家への忠誠は二の次である軍隊が永遠に失われることへの懸念が生じている。幸運なことに彼らはむしろ、この新式軍が渦巻く不平不満に対する有無を言わさぬ根拠となることを心配している…[Root.GetNoblesReplacementForOtherGovernments]は特に、彼らの地位が脅かされる可能性があることを恐れている。"
  EVTOPTB843A:0 "心配は無用だ。"
  EVTNAME844:0 "新しい司令官"
  EVTDESC844:0 "我々の求める規律正しい軍隊のため、部隊を完璧に鍛え上げようと指揮官たちは熱心に努めている。そのうちの一人は、まさに将来有望だ。"
@@ -4238,7 +4238,7 @@
  court_and_country_events.4.a:0 "これらの不穏分子を叩き潰そう！"
  court_and_country_events.4.b:0 "我々は[city_league_demand_rights_province.GetName]の都市について例外を作ることができる。"
  court_and_country_events.5.t:0 "争い好きな[quarrelsome_nobles_province.GetName]の貴族たち"
- court_and_country_events.5.d:0 "いくつかの貴族たちは高貴な新しい理想に憤慨するようになった。彼らは[Root.Capital.GetCapitalName]で影響力と権力を失ったが、彼らは依然として、家名と財力による広大な私有地によって、かなりの地方で影響力を保持している。彼らが[Root.Monarch.GetTitle]と[Root.Monarch.GetHerHis]の閣僚の奉仕者ではなく、王国の柱であった時代には、彼らはより争い好きで、頑固であった。\nそのような集団の一つが、古い特権を回復し、伝統と尊厳を[Root.Capital.GetCapitalName]の宮廷に戻す陰謀を準備しているようだ。彼らの田舎の保有地を拠点にして、彼らは我々の意志を強制する軍隊を召集している。"
+ court_and_country_events.5.d:0 "いくつかの貴族たちは高貴な新しい理想に憤慨するようになった。彼らは[Root.Capital.GetCapitalName]で影響力と権力を失ったが、彼らは依然として、家名と財力による広大な私有地によって、かなりの地方で影響力を保持している。[Root.Monarch.GetTitle]と[Root.Monarch.GetHerHis]の閣僚の奉仕者ではなく、王国の柱であった時代には、彼らはより争い好きで、頑固であった。\nそのような集団の一つが、古い特権を回復し、伝統と尊厳を[Root.Capital.GetCapitalName]の宮廷に戻す陰謀を準備しているようだ。彼らの田舎の保有地を拠点にして、彼らは我々の意志を強制する軍隊を召集している。"
  court_and_country_events.5.a:0 "我々は剣を手に彼らと出会うだろう。"
  court_and_country_events.5.b:0 "彼らの要求を満たすように取り計らってみよう。"
  court_and_country_events.6.t:0 "不実な士官たち"
