--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1748,7 +1748,7 @@
  mehrangarh_fort:0 "メヘラーンガル城"
  nan_madoll:0 "ナンマトル"
  porcelain_tower_nanjing:0 "大報恩寺"
- qhapaq_nam:1 "Qhapaq Ñan"
+ qhapaq_nam:1 "カパック・ニャン"
  rila_monasteries:0 "リラ修道院"
  churches_lalibela:0 "ラリベラの岩窟教会群"
  royal_palace_caserta:0 "カゼルタ宮殿"
@@ -1802,7 +1802,7 @@
  alcheringa_events.7.t:0 "The Dharma"
  alcheringa_events.7.d:0 "People of the Dharmic religions follow many gods and take many forms. By studying their ways more deeply, we have gained some unique visions of the Dreamtime."
  alcheringa_events.7.a:0 "Wonderful"
- alcheringa_events.8.t:0 "Dream of Baiame"
+ alcheringa_events.8.t:0 "バイアメの夢"
  alcheringa_events.8.d:0 "Strangers arrive to the shores of Australia, preaching of the cross and an ancient martyr. While we will not wholeheartedly embrace this new faith, the landscape of Dreaming Stories will undoubtedly be influenced by these new revelations."
  alcheringa_events.8.a:0 "Wonderful"
  alcheringa_events.9.t:0 "The Spirits"
