--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -329,7 +329,7 @@
  PROV_ADJ330:0 "トレビゾンド"
  PROV_ADJ331:0 "エルズルム"
  PROV_ADJ332:0 "マラシュ"
- PROV_ADJ333:1 "Mallorcan"
+ PROV_ADJ333:1 "マヨルカ"
  PROV_ADJ334:0 "タンジール"
  PROV_ADJ335:0 "メリリャ"
  PROV_ADJ336:0 "トレムセン"
@@ -553,7 +553,7 @@
  PROV_ADJ562:0 "コーチ"
  PROV_ADJ563:0 "ガウダ"
  PROV_ADJ564:0 "ダッカ"
- PROV_ADJ565:1 "Paronese"
+ PROV_ADJ565:1 "パロ"
  PROV_ADJ566:0 "アッサム"
  PROV_ADJ567:0 "シレット"
  PROV_ADJ568:0 "チッタゴン"
@@ -1037,7 +1037,7 @@
  PROV_ADJ1047:0 "ジュグジュル"
  PROV_ADJ1048:0 "ミャオ・ガサン"
  PROV_ADJ1049:0 "ハイランバオ"
- PROV_ADJ1050:1 "Tyrian"
+ PROV_ADJ1050:1 "トィル"
  PROV_ADJ1051:0 "アルダン"
  PROV_ADJ1052:0 "スタノヴォイ"
  PROV_ADJ1053:0 "ヒンガン"
@@ -1372,7 +1372,7 @@
  PROV_ADJ1382:0 "コメンスコエ湾"
  PROV_ADJ1383:0 "カムチャツカ海岸"
  PROV_ADJ1384:0 "オホーツク海"
- PROV_ADJ1385:1 "Coast of Enchiw"
+ PROV_ADJ1385:1 "エンチウ沿岸"
  PROV_ADJ1386:0 "宗谷海峡"
  PROV_ADJ1387:0 "津軽海峡"
  PROV_ADJ1388:0 "大和海盆"
@@ -2053,7 +2053,7 @@
  PROV_ADJ2070:0 "チョービシ・ラージャ"
  PROV_ADJ2071:0 "リンブワン"
  PROV_ADJ2072:0 "バッカル"
- PROV_ADJ2073:1 "Gilgiter"
+ PROV_ADJ2073:1 "ギルギット"
  PROV_ADJ2074:0 "ラダック"
  PROV_ADJ2075:0 "ドアバ"
  PROV_ADJ2076:0 "シアールコート"
@@ -2080,7 +2080,7 @@
  PROV_ADJ2099:0 "キャンディ"
  PROV_ADJ2100:0 "ヴァンニ"
  PROV_ADJ2101:0 "ティルネルヴェーリ"
- PROV_ADJ2102:1 "Albazinian"
+ PROV_ADJ2102:1 "アルバジン"
  PROV_ADJ2103:0 "ウディ"
  PROV_ADJ2104:0 "ビリジャ"
  PROV_ADJ2105:0 "クル"
@@ -2106,7 +2106,7 @@
  PROV_ADJ2125:0 "コチコル"
  PROV_ADJ2126:0 "チュイ"
  PROV_ADJ2127:0 "ヤシルクル"
- PROV_ADJ2128:1 "Tsaparangian"
+ PROV_ADJ2128:1 "ツァパラン"
  PROV_ADJ2129:0 "チャンタン"
  PROV_ADJ2130:0 "ニンティ"
  PROV_ADJ2131:0 "チャムド"
@@ -2168,7 +2168,7 @@
  PROV_ADJ2187:0 "薩爾図"
  PROV_ADJ2188:0 "アルチュカ"
  PROV_ADJ2189:0 "ツェツェルレグ"
- PROV_ADJ2190:1 "Bayankhongorian"
+ PROV_ADJ2190:1 "バヤンホンゴル"
  PROV_ADJ2191:0 "エジン"
  PROV_ADJ2192:0 "コルラ"
  PROV_ADJ2193:0 "ゴビ"
@@ -3151,9 +3151,9 @@
  PROV_ADJ4211:0 "達州"
  PROV_ADJ4212:0 "嘉州"
  PROV_ADJ4213:0 "瀘州"
- PROV_ADJ4214:1 "Ulchi"
+ PROV_ADJ4214:1 "ウリチ"
  PROV_ADJ4215:0 "フダリ"
- PROV_ADJ4216:1 "Orochi"
+ PROV_ADJ4216:1 "オロチ"
  PROV_ADJ4217:0 "ピジン"
  PROV_ADJ4218:0 "布特哈"
  PROV_ADJ4219:0 "バヤン・トゥメン"
