--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1197,7 +1197,7 @@
  ARMY_TRADITION_IRO:0 "陸軍の伝統は以下の要因により毎年$VAL|+$変化します：\n"
  ARMY_TRADITION_DRO:0 "陸軍の伝統は、あなたの国家で蓄積された陸軍の経験値です。伝統はアイデア、建物、戦闘及び探検から得られます。"
  CURRENT_EFFECTS:0 "§Y現在の効果§!"
- TRADE_THROUGH_TT:1 "$WHO$ belongs to the §Y$WHERE$§W trade node, and is $COL$$RANGE$§! away from our closest core province.\n$POWER$"
+ TRADE_THROUGH_TT:1 "$WHO$は交易ノード§Y$WHERE$§Wに属し、最も近い我々の中核州から$COL$$RANGE$§!の距離にあります。\n$POWER$"
  TRADE_POWER_MAP_TT_EXPL:0 "ノードに州の§Y$PERC$%§!にあたる$VAL$の交易力をもたらします。"
  TRADE_GOODS_SIZE:0 "州生産力"
  TRADE_GOODS_SIZE_MODIFIER:0 "州生産力補正"
@@ -2450,18 +2450,18 @@
  POWER_ACTION_MAKE_CORE:0 "$PROVINCE$を中核州にします。"
  OFFER_NAVALACCTITLE:0 "港湾使用権を提供する"
  NAVALACCTITLE:0 "港湾使用権を要請する"
- NAVALACCNEWDESC:1 "Do you wish to request Fleet basing rights from $COUNTRY$, thereby allowing our ships access to their ports? This will allow our ships to be repaired in their ports.\nEach month they will charge us a fee of §Y$VAL$§W¤. If they acquire more ports this cost may go up."
+ NAVALACCNEWDESC:1 "$COUNTRY$に港湾使用権を要請し、我々の船が彼らの港へ入港できるようにしますか？これにより我々の船が彼らの港で修理できるようになります。\n彼らは毎月§Y$VAL$§W¤の使用料を請求します。彼らが更に港を獲得した場合、この使用料は増加することがあります。"
  NAVALACCDESC:0 "彼らの港における港湾使用権を要請します。"
  OFFER_NAVALACCDESC:0 "あなたの港における港湾使用権の供与を提案します。"
- NAVALACCREQDESC:1 "$COUNTRY$ is requesting Fleet Basing Rights from us. Accepting will allow them to base ships in our ports and allows them to repair ships in them."
- NAVALACCOFFDESC:1 "$COUNTRY$ is offering Fleet Basing Rights to us. Accepting will allow us to base ships in their ports and allows us to repair ships in them.\nEach month they will charge us a fee of §Y$FEES$§W¤. If they acquire more ports this cost may go up."
+ NAVALACCREQDESC:1 "$COUNTRY$は我々に港湾使用権の要請をしています。承諾することにより彼らは我々の港へ入港できるようになり、艦船の修理を行うことができるようになります。"
+ NAVALACCOFFDESC:1 "$COUNTRY$は我々に港湾使用権供与の提案をしています。承諾することにより我々は彼らの港へ入港できるようになり、艦船の修理を行うことができるようになります。\n彼らは毎月§Y$FEES$§W¤の費用を請求します。彼らがより多くの港を獲得した場合、この費用は増加することがあります。"
  CANCELNAVALACCDESC:0 "我々への港湾使用権を取り消します。"
  CANCELNAVALACCTITLE:0 "港湾使用権を取り消す"
- CANCELNAVALACCNEWDESC:1 "Do you wish to cancel fleet basing rights given to us by $COUNTRY$? Doing so will prevent our fleets from accessing their ports."
+ CANCELNAVALACCNEWDESC:1 "$COUNTRY$から付与されている港湾使用権を取り消しますか？これにより我々の船は彼らの港へ入港ができなくなります。"
  REVOKENAVALACCDESC:0 "彼らへの港湾使用権を取り消します。"
  REVOKENAVALACCTITLE:0 "港湾使用権を剥奪する"
  REVOKENAVALACCNEWDESC:0 "$COUNTRY$へ付与している港湾使用権を剥奪しますか？これにより彼らの船は我々の港へ入港できなくなり、彼らの植民範囲と交易範囲の拡大に利用されなくなります。"
- OFFER_NAVALACCNEWDESC:1 "Do you wish to offer Fleet basing rights to $COUNTRY$, thereby allowing their ships access to our ports? This will allow their ships to be repaired in our ports.\nEach month we will charge them a fee of §Y$VAL$§W¤. If we acquire more ports this cost will go up."
+ OFFER_NAVALACCNEWDESC:1 "$COUNTRY$に港湾使用権を提供し、彼らの船が我々の港へ入港できるようにしますか？これにより彼らの船が我々の港で修理できるようになります。\n我々は毎月§Y$VAL$§W¤の使用料を請求します。我々が更に港を獲得した場合、この使用料は増加することがあります。"
  ICON_ASKFLEET:0 "§Y港湾使用権§Wの要請"
  ICON_OFFERFLEET:0 "§Y港湾使用権§!の提供"
  VIEW_PLAYER_COUNTRY:0 "自国を見る"
@@ -2839,7 +2839,7 @@
  NO_MORE_BANKLOANS_UNCONDITIONAL:0 "無条件降伏して借金をすることはできません！"
  WE_IMPACT_ON_ANNEX_INTEGRATE:0 "外交併合と統合：$VAL$\n"
  TRIBAL:0 "部族"
- NUM_OF_OWNED_PROVINCES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:3 "$NUMBER|Y$ provinces (current: $CURRENT|Y$) owned by you or your non-tributary subjects with"
+ NUM_OF_OWNED_PROVINCES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:3 "$NUMBER|Y$の自国または従属国（非朝貢国）が領有する州（現在：$CURRENT|Y$）で"
  CONFIRM_ADVISOR_FIRE:0 "§Y$NEW$§!を雇用すると、§Y$OLD$§!を解雇することになります"
  WE_ARE_SUBJECT:0 "我々は$WHO$の従属国です。"
  IS_NOT_SUBJECT_OF:0 "以下の従属国ではない："
@@ -3650,7 +3650,7 @@
  cb_maya_expansion:0 "マヤ連合"
  cb_maya_expansion_desc:0 "我々の周りの土地はさほど重要でない無数の都市国家、すなわちカーに分かれている。近隣のカーはすべて我々の都市に加わるべきであり、さもなくば滅びなければならない。"
  cb_chinese_unification:0 "中華統一"
- cb_chinese_unification_desc:1 "Unify lands of the Chinese Subcontinent.\n§YEvery occupied province in the China Subcontinent gains our core while we are the warleader!§!"
+ cb_chinese_unification_desc:1 "中国大陸を統一せよ。\n§Y自国が主戦国である間、中国大陸にある州で占領した州全てに自国の中核が付与されます！§!"
  cb_take_mandate:0 "天命"
  cb_take_mandate_desc:0 "我々は天命を受けるに値することを世に知らしめねばならない。"
  EXECUTING_POST_HOTJOIN_COMMANDS:0 "post-hotjoinコマンドを実行する。"
@@ -4534,17 +4534,17 @@
  HEIR_NATIONALITY:0 "現在の後継者は$WHO$である"
  mr_guilds:0 "ギルド"
  mr_guilds_influence:0 "ギルドの影響"
- mr_guilds_FACTION_DESC:1 "Representing the Artisans and Master Craftsmen inhabiting our cities that have banded together in Guilds for mutual economic gain and assistance. Their main concern is the economic well-being of the cities.\n\n§YGains influence through Overextension and Bankruptcy.§!"
+ mr_guilds_FACTION_DESC:1 "相互の経済的利益と支援のためギルドで団結してきた、我々の都市に住む職人や熟練工を代表する。彼らの主な関心事は都市の経済的幸福である。\n\n§Y 過剰拡大と破産から影響力を獲得します。§!"
  support_mr_guilds_title:0 "ギルドの奨励"
  support_mr_guilds_desc:0 ""
  mr_traders:0 "交易商"
  mr_traders_influence:0 "交易商の影響"
- mr_traders_FACTION_DESC:1 "Representing the Merchants and Ship Captains that are the lifeblood of the Republic's trade. Their main concern is the control of lucrative maritime trade routes.\n\n§YGains influence through Navy Tradition.§!"
+ mr_traders_FACTION_DESC:1 "共和国の交易の生命線である商人や、船の船長を代表する。彼らの主な関心事は有利な海上交易路の支配である。\n\n§Y海軍伝統から影響力を獲得します。§!"
  support_mr_traders_title:0 "交易商の奨励"
  support_mr_traders_desc:0 ""
  mr_aristocrats:0 "貴族"
  mr_aristocrats_influence:0 "貴族の影響"
- mr_aristocrats_FACTION_DESC:1 "Representing the aristocratic Patrician families that dominate the political life in the capital. Their main concern is ensuring that the Republic is victorious in war and achieves the glory that they view as their own.\n\n§YGains influence through positive Stability and Army Tradition. Loses influence through War Exhaustion.§!"
+ mr_aristocrats_FACTION_DESC:1 "首都の政治生命を支配する愛国的な貴族たちを代表する。彼らの主な関心事は、共和国が戦争で勝利し、自国の栄光を達成することである。\n\n§Y正の安定度から影響力を獲得します。戦争疲弊によって影響力を失います。§!"
  support_mr_aristocrats_title:0 "貴族の奨励"
  support_mr_aristocrats_desc:0 ""
  SPY_AGAIN_TICKS:0 "$WHEN|Y$までの間、我々の情報網は衰退するでしょう。\n"
@@ -4573,8 +4573,8 @@
  CANT_AFFORD_HARSH_TREATMENT:0 "$NAME$の弾圧処置には$AMOUNT$£mil£が必要です。"
  RELIGION_CANT_CONVERT:0 "我々は$DATE|Y$に改宗できる予定です。\n"
  RELIGION_CANT_CHANGE_SECONDARY:0 "$DATE|Y$に融合した信仰を変更できるでしょう。\n"
- FLEET_BASING_RIGHT:1 "This will allow $ACTOR$ fleets to be based in $RECIPIENT$ ports."
- OFFER_FLEET_BASING_RIGHT:1 "This will allow $RECIPIENT$ fleets to be based in $ACTOR$ ports."
+ FLEET_BASING_RIGHT:1 "これは$ACTOR$の艦隊が$RECIPIENT$の港を拠点とすることを許可します。"
+ OFFER_FLEET_BASING_RIGHT:1 "これは$RECIPIENT$の艦隊が$ACTOR$の港を拠点とすることを許可します。"
  LEADER_ASSIGNED_TO_UNIT:0 "この指揮官はすでに$NAME|Y$に割り当てられています。"
  ASSIGNED:0 "配属済"
  RENEW_TAXES_DIALOG_TITLE:0 "戦争税の延長"
@@ -4715,7 +4715,7 @@
  LESS_DEVELOPMENT_THAN_TARGET:0 "開発が対象より$DIFF$少ない："
  CONFIRM_DECLARE_WAR_TITLE:0 "宣戦布告の確認"
  CONFIRM_DECLARE_WAR_DESC_PREPEND:0 "この戦争を宣言するとすぐに深刻な悪影響を及ぼします。\n\n安定度への影響：\n"
- CANT_ABORT_EXPLORATION_MISSION:2 "This fleet has left port and is out of Supply Range from the nearest Core port ($PROVINCE$) and cannot be assigned a new mission until it returns from its exploration mission."
+ CANT_ABORT_EXPLORATION_MISSION:2 "この艦隊は港を去り、最も近い中核州の港湾（$PROVINCE$）からみて供給範囲外にあり、その探検任務から戻るまで新しい任務を割り当てることはできません。"
  PIRATEHUNT_MISSION_DESC:0 "§Y$NODE$§!の交易ノードで海賊を追跡"
  HIDE_MISSION_DESC:0 "隠れている（$DESC$）"
  HIDE_MISSION_TOOLTIP:0 "現在、非常に強力な敵艦隊から隠れています。"
@@ -4980,7 +4980,7 @@
  IDEA_NOT_ALLOWED:0 "§R禁止されている§!"
  CORRUPTION_LESS_THAN:1 "汚職が§Y$VAL$%§W未満である。\n"
  CORRUPTION_AT_LEAST:1 "汚職が§Y$VAL$%§W以上である。\n"
- NUM_OF_OWNED_PROVINCES_WITH:3 "$NUMBER|Y$ owned provinces (current: $CURRENT|Y$) with"
+ NUM_OF_OWNED_PROVINCES_WITH:3 "$NUMBER|Y$の領有州（現在：$CURRENT|Y$）で"
  NUM_OF_OWNED_STATES_WITH:0 "領有ステートで"
  NUM_OF_OWNED_STATES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:0 "の自国または従属国（非朝貢国）が領有するステート"
  CV_GO_BANKRUPT_TEXT:4 "破産を宣言することで、すべての借金を帳消しにします。\nこれは、威信と安定度に直接損失を引き起こします。すべての雇用された顧問と傭兵は我々への奉仕から離れ、他国へのいかなる補助金も中止されます。\n破産は、すべての建設の進歩を止め、いたる所に荒廃をもたらすため、我が国を後退させるでしょう。\n$DURATION|Y$年の間、以下のような影響も受けます：\n$EFFECT$$ADDITIONAL_EFFECT$\n\n本当によろしいですか？"
@@ -5054,8 +5054,8 @@
  LUX_parliament_name:0 "ダチャンバー"
  IRE_parliament_name:0 "ウラクタス"
  MONARCH_NATIONAL_FOCUS_CHANGED:0 "ナショナルフォーカスを$VAR$に変更する"
- ROM_parliament_name:0 "Senate"
- BYZ_parliament_name:0 "Senate"
+ ROM_parliament_name:0 "元老院"
+ BYZ_parliament_name:0 "元老院"
  amur_estuary_modifier:0 "アムール河口"
  desc_amur_estuary_modifier:0 "重要河川であるアムール川の河口を支配することで、我々はこの地方の交易に対する影響力を強化できる。"
  COLONIAL_EASTERN_AMERICA_Miju:0 "美州"
