--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1476,7 +1476,7 @@
  BLOCK_OFFENSIVE_WARS_ENABLE_DESC:1 "§Y$COUNTRY$§!に対し我々は彼らの攻撃的な戦争に参加しないことを伝えます。これはまた好感度の蓄積を止め、彼らがあなたなしでも管理できると考えれば、同盟を終了する可能性があります。クリックすると再び攻撃的な戦争に参加することを伝えます。"
  AI_WANTS_PROVINCES:0 "\n\n$WHO|Y$は以下の州に関心を持っています：$LIST$。"
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
- EST_VAL_ALLIANCE_ON_VC:2 "同盟テリトリーでの勝利カード（$NAME$）：（全角）§R$VAL|1$%§!"
+ EST_VAL_ALLIANCE_ON_VC:2 "同盟テリトリーでの勝利カード（$NAME$）：§R$VAL|1$%§!"
  FAVORS_GAIN_TOOLTIP:1 "以下の要因により毎月$VAL|+=2$の好感度を獲得します：\n$WHY$"
  FAVOR_ALLIANCE_TT:0 "同盟軍：相対的兵力：$VAL|+=2$"
  FAVOR_ALLIANCE_BLOCKED_TT:0 "攻撃側戦争の拒否：$VAL|+=2$"
