--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -542,8 +542,8 @@
  OTHER_TRADE_FAVORS_FOR_GOLD_HEADER:0 ""
  OTHER_TRADE_FAVORS_FOR_GOLD_1:0 "$ACTOR$からの使者"
  OTHER_TRADE_FAVORS_FOR_GOLD_2:0 "$MONARCHTITLE$、国家$ACTOR$は"
- OTHER_TRADE_FAVORS_FOR_GOLD_3:1 "Asked $RECIPIENT$ for $PERCENT$% of their yearly income ($CASH|Y$¤)"
- OTHER_TRADE_FAVORS_FOR_GOLD_4:0 "収入$MONTHS$ヶ月分の金銭（$CASH|Y$¤）を求めました。"
+ OTHER_TRADE_FAVORS_FOR_GOLD_3:1 "$RECIPIENT$に好感度$FAVOR|Y$と引き換えに"
+ OTHER_TRADE_FAVORS_FOR_GOLD_4:0 "年収の$PERCENT$%にあたる金銭（$CASH|Y$¤）を求めました。"
  OTHER_TRADE_FAVORS_FOR_GOLD_6:0 "先の見えない不安感が残ります…"
  OTHER_TRADE_FAVORS_FOR_GOLD_LOG:0 "$ACTOR$、$RECIPIENT$に好感度を使い金銭を求める"
  OTHER_TRADE_FAVORS_FOR_GOLD_BTN1:0 "OK"
@@ -553,7 +553,7 @@
  TRADE_FAVORS_FOR_GOLD_DECLINED_SETUP:0 "ある国が他国に好感度と引き換えにしたダカットの提供を拒否したとき"
  TRADE_FAVORS_FOR_GOLD_DECLINED_HEADER:0 "好感度によるダカットの要求は拒否されました"
  TRADE_FAVORS_FOR_GOLD_DECLINED_1:0 "$RECIPIENT$は"
- TRADE_FAVORS_FOR_GOLD_DECLINED_2:1 "has refused a request for $PERCENT$% of their yearly income ($CASH|Y$¤)"
+ TRADE_FAVORS_FOR_GOLD_DECLINED_2:1 "は、好感度$FAVOR|Y$と引き換えに"
  TRADE_FAVORS_FOR_GOLD_DECLINED_3:0 "収入$MONTHS$ヶ月分の金銭（$CASH|Y$¤）を求める"
  TRADE_FAVORS_FOR_GOLD_DECLINED_4:0 "$ACTOR$からの要求を拒否しました。"
  TRADE_FAVORS_FOR_GOLD_DECLINED_6:0 "この侮辱を忘れることはないでしょう！"
@@ -566,8 +566,8 @@
  TRADE_FAVORS_FOR_GOLD_CANNOT_DEBT:0 "$COUNTRY$は$AMOUNT|Y$¤の負債を抱えています"
  TRADE_FAVORS_FOR_GOLD_CANNOT_COST:0 "金銭を要求するには、§Y$COUNTRY$§!の好感度が§Y$COST$§!以上必要です。"
  TRADE_FAVORS_FOR_GOLD_CANNOT_OPINION:0 "金銭を要求するには、§Y$COUNTRY$§!の評価が§Y$OPINION$§!以上必要です。"
- TRADE_FAVORS_FOR_GOLD_DESC2:2 "Spend $FAVOR|Y$ Favors in exchange for $PERCENT|%$ of their yearly income ($CASH|Y$¤)."
- TRADE_FAVORS_FOR_GOLD_DESC:2 "We will ask that $RECIPIENT|Y$ give us $PERCENT|%$ of their yearly income ($CASH|Y$¤) in exchange for $FAVOR|Y$ Favors."
+ TRADE_FAVORS_FOR_GOLD_DESC2:2 "彼らの年収の$PERCENT|%$にあたる金銭（$CASH|Y$¤）と引き換えに$FAVOR|Y$の好感度を使います。"
+ TRADE_FAVORS_FOR_GOLD_DESC:2 "$RECIPIENT|Y$に、好感度$FAVOR|Y$と引き換えに、彼らの年収の$PERCENT|%$にあたる金銭（$CASH|Y$¤）を提供してもらいます。"
  WE_TRADE_FAVORS_FOR_MEN_TITLE:0 "人的資源を好感度と交換する"
  WE_TRADE_FAVORS_FOR_MEN_SETUP:0 "我々がある国に好感度をもって人的資源の提供を求めたとき"
  WE_TRADE_FAVORS_FOR_MEN_HEADER:0 "$MESSENGER$"
@@ -585,7 +585,7 @@
  TRADE_FAVORS_FOR_MEN_1:0 "$ACTOR$からの使者"
  TRADE_FAVORS_FOR_MEN_2:0 "$MONARCHTITLE$、国家$ACTOR$は、"
  TRADE_FAVORS_FOR_MEN_3:0 "好感度$FAVOR|Y$と引き換えに、供給量$MONTHS$ヶ月分の兵（$MEN|Y$）を"
- TRADE_FAVORS_FOR_MEN_4:0 "自国に求めてきました。"
+ TRADE_FAVORS_FOR_MEN_4:0 "年収の$PERCENT$%にあたる金銭（$CASH|Y$¤）を求めました。"
  TRADE_FAVORS_FOR_MEN_5:0 "盟友のお役に立てて嬉しいです！"
  TRADE_FAVORS_FOR_MEN_LOG:0 "$ACTOR$、我々に好感度を使い兵を求める"
  TRADE_FAVORS_FOR_MEN_BTN1:0 "OK"
@@ -1138,7 +1138,7 @@
  MAY_DRILL:0 "兵の訓練が可能"
  MAY_DRILL_SHORT:0 "訓練可"
  EStopMissionReason_TechDoesntAllowIt:0 "必要技術を持っていません。"
- COASTAL_SEA_DESC:0 "ここは沿岸です。ここでは、ガレー船が特に力を発揮し、戦闘時、ガレー船以外の他の艦船に対して50%多くダメージを与えます。"
+ COASTAL_SEA_DESC:0 "ここは沿岸です。ここでは、ガレー船がやや力を発揮し、戦闘時、ガレー船以外の他の艦船に対して50%多くダメージを与えます。"
  MAPMODE_RELIGIOUS_LEAGUES:0 "宗教連盟"
  MAPMODE_RELIGIOUS_LEAGUES_DESC:0 "どの国がどの宗教連盟に所属しているかを表示します。緑の国は神聖ローマ帝国の公式宗教の連盟に、青色の国は異端の宗教の連盟に属しています。"
  LEAGUE_MEMBER_DESC:0 "$COUNTRY|Y$は神聖ローマ帝国の宗教連盟に参加している"
@@ -1236,7 +1236,7 @@
  RESCIND_UPGRADE_SUBJECT_TYPE_NAME:0 "$SUBJECTTYPEUPGRADE$を取り消す"
  GALLEY_BONUS_NOT_INLAND_SEA_NO_MALUS_DESC:0 "ここは内海・沿岸ではないので、ガレー船はここでダメージボーナスを得ることはできません。"
  CONCENTRATE_DEVELOPMENT_TAKE:0 "開発度$DEV$は、$STATE|Y$から取得します。これは、$ADM$£adm 、$DIP$£dip 、$MIL$£mil に変換されます。"
- CONCENTRATE_DEVELOPMENT_DISTRIBUTION:0 "首都では、消費後に、$ADM$、$DIP$。、$MIL$の追加開発度を支払います。"
+ CONCENTRATE_DEVELOPMENT_DISTRIBUTION:0 "消費後に、首都は $ADM$, $DIP$, $MIL$ の追加開発度を支払います。"
  CONCENTRATE_DEVELOPMENT_CONSEQUENCES:1 "これにより独立欲求$LIBERTYDESIRE$と外交評価$OPINION$が$COUNTRY|Y$に発生し、開発度を奪われた州に荒廃を与えます。"
  AGGRESSIVE_EXPANSION_REFORM_PREVENTS:0 "改革$REFORM$は可決している"
  GETEILTE_MACHT_EFFECT:0 "神聖ローマ皇帝が神聖ローマ帝国外の州を奪取した際、神聖ローマ帝国の加盟国は、皇帝への侵略的拡大を蓄積しなくなりました。"
@@ -1466,14 +1466,14 @@
  MERCENARY_COMPANY_IS_NOT:0 "傭兵団が$NAME$ではない"
  CANCEL_NAVAL_MISSION_DESC:0 "現在のミッションを中止します"
  MODIFIER_MONTHLY_PIETY_ACCELERATOR:0 "毎月の信仰心促進"
- CANNOT_COLONIZE_CUT_OFF:0 "The closest neighbour ($PROVINCE$) is cut off from our capital."
- HRE_VOTE_INELIGIBLE_DOESNT_EXIST:0 "$COUNTRY|Y$ does not exist."
+ CANNOT_COLONIZE_CUT_OFF:0 "最も近い州（$PROVINCE$）は首都から切り離されています。"
+ HRE_VOTE_INELIGIBLE_DOESNT_EXIST:0 "$COUNTRY|Y$は存在しません。"
  JEWISH_ASPECTS_POWER_NAME:0 "信仰力"
  PROTESTANT_ASPECTS_POWER_NAME:0 "教会権力"
  ANGLICAN_ASPECTS_POWER_NAME:0 "教会権力"
- LOSING_GP_POWER_PROJECT:0 "Clinging on to Great Power status"
- TRADE_MERCHANT_ALREADY_COLLECTING:0 "$ENVOY$ is already collecting from trade here."
- TRADE_MERCHANT_ALREADY_TRANSFERRING:0 "$ENVOY$ is already transferring Trade Power here."
+ LOSING_GP_POWER_PROJECT:0 "列強の立場に固執している"
+ TRADE_MERCHANT_ALREADY_COLLECTING:0 "$ENVOY$はすでにここで交易から徴収している。"
+ TRADE_MERCHANT_ALREADY_TRANSFERRING:0 "$ENVOY$は既にここで交易力を送っています。"
  recently_changed_religion_dummy:0 "最近宗教を変更した"
  REBELS_ABANDON_CAUSE_TITLE:0 "反乱軍が大義を失う"
  REBELS_ABANDON_CAUSE_SETUP:0 "反乱軍が武器を置いたとき。"
@@ -1483,7 +1483,7 @@
  REBELS_ABANDON_CAUSE_LOG:0 "$REBELTYPE$が反乱をやめる。"
  REBELS_ABANDON_CAUSE_BTN1:0 "OK"
  REBELS_ABANDON_CAUSE_BTN2:0 "OK"
- REBELS_ABANDON_CAUSE_BTN3:0 "Go to"
+ REBELS_ABANDON_CAUSE_BTN3:0 "移動"
  NO_DEVASTATION_SOME_PROSPERITY_MAP_TT:0 "$NAME|Y$ is not devastated, and is $VAL|0&$ towards prosperity."
  DIPIRO_GUARANTEED_BY_DATE:0 "$NAME|Y$によって独立を$DATE|Y$まで保障されています。"
  DIPIRO_GUARANTEE_DATE:0 "$NAME|Y$の独立を$DATE|Y$まで保障しています。"
@@ -1523,8 +1523,8 @@
  CANNOT_EXPLORE_WASTELAND:0 "Terra Incognita is part of the world that you have not explored yet. This particular bit of wasteland is too dangerous to explore."
  AI_ACCEPT_HUMAN:0 "This is a Human player and will decide for themselves."
  MODIFIER_NO_STABILITY_LOSS_ON_MONARCH_DEATH:0 "No Stability loss on Monarch death"
- scottish_india_trade_co:0 "Scottish East India Company"
- desc_scottish_india_trade_co:0 "The Scottish East India Company oversees all Scottish possessions in Africa and India and controls all the rights to trade there."
+ scottish_india_trade_co:0 "スコットランド東インド会社"
+ desc_scottish_india_trade_co:0 "スコットランド東インド会社は、アフリカとインドのすべてのスコットランドの財産を監督し、そこで交易するあらゆる権利を支配している。"
  WECONVERT_SECONDARY_REMOVED_TITLE:0 "Changed Secondary Religion"
  WECONVERT_SECONDARY_REMOVED_SETUP:0 "When we choose a new secondary religion."
  WECONVERT_SECONDARY_REMOVED_HEADER:0 "Syncretic Faith removed"
@@ -1533,7 +1533,7 @@
  WECONVERT_SECONDARY_REMOVED_LOG:0 "We have chosen not to have a secondary religion."
  WECONVERT_SECONDARY_REMOVED_BTN1:0 "OK"
  WECONVERT_SECONDARY_REMOVED_BTN2:0 "OK"
- WECONVERT_SECONDARY_REMOVED_BTN3:0 "Go to"
+ WECONVERT_SECONDARY_REMOVED_BTN3:0 "移動"
  CANNOT_PERFORM_ACTION_NOT_YOUR_UNIT:0 "You do not control this unit."
  UNIT_LOADED_ON_A_SHIP:0 "The unit is on board a ship."
  HAS_FOREIGN_UNITS_ABOARD:0 "The ship has foreign units on board."
@@ -1560,7 +1560,7 @@
  WE_CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "We have converted $RECIPIENT$ into a Vassal using our Mandate."
  WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN1:0 "OK"
  WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN2:0 "OK"
- WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "Go to"
+ WE_CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "移動"
  CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "Convert Tributary To Vassal"
  CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "When a country uses Mandate to make us into a Vassal."
  CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 "Herald from"
@@ -1572,7 +1572,7 @@
  CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "$ACTOR$ have converted us into their Vassals."
  CONVERT_TRIBUTARY_TO_VASSAL_BTN1:0 "OK"
  CONVERT_TRIBUTARY_TO_VASSAL_BTN2:0 "OK"
- CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "Go to"
+ CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "移動"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_TITLE:0 "Convert Tributary To Vassal"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_SETUP:0 "When a country uses Mandate to make another country into a Vassal."
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_HEADER:0 "Herald from"
@@ -1583,7 +1583,7 @@
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_LOG:0 "$ACTOR$ has converted $RECIPIENT$ into their Vassals in exchange for Mandate."
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN1:0 "OK"
  OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN2:0 "OK"
- OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "Go to"
+ OTHER_CONVERT_TRIBUTARY_TO_VASSAL_BTN3:0 "移動"
  CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_EMPEROR:0 "You are not the Celestial Emperor."
  CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_GOT_REFORM:0 "The Celestial Emperor cannot Vassalise its Tributaries until the correct decision has been made."
  CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_ENOUGH_MANDATE:0 "You do not have the $MANDATE$ Mandate required."
@@ -1593,8 +1593,8 @@
  leader_death_reason_lost_at_sea:0 "[GetSheHeCap] died at sea after his transport ship sank."
  MODIFIER_FREE_LAND_LEADER_POOL:0 "Land Leader(s) without Upkeep"
  MODIFIER_FREE_NAVY_LEADER_POOL:0 "Navy Leader(s) without Upkeep"
- land_forcelimit:0 "Land Force Limit"
- naval_forcelimit:0 "Naval Force Limit"
+ land_forcelimit:0 "陸軍扶養限界"
+ naval_forcelimit:0 "海軍扶養限界"
  GREAT_PROJECT_CHARTER_COST:0 "$GREATPROJECT|Y$: "
  CS_REVOLUTION_CENTRE:1 "You cannot add Centers of Revolution to your Subjects."
  ALLOW_ATTACH_CANNOT_EXILED:0 "Exiled Units cannot attach other armies."
@@ -1609,6 +1609,6 @@
  MODIFIER_RELATION_WITH_ACCEPED_CULTURE:0 "Opinion of Accepted Culture"
  MODIFIER_RELATION_WITH_OTHER_CULTURE:0 "Opinion of Non-Accepted Culture"
  CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_TRIBUTARY:0 "$COUNTRY$ are not your Tributary State."
- CENTRALIZE_STATE_NOPOWER:0 "You don't have enough Administrative Power to Centralize State. You need $POWER_COST|Y$£adm and have $POWER_AVAILABLE|Y$£adm available."
- EXPAND_INFRASTRUCTURE_NOPOWER:0 "You don't have enough Administrative Power to Expand Infrastructure. You need $POWER_COST|Y$£adm and have $POWER_AVAILABLE|Y$£adm available."
- EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "Expand your Province's infrastructure for $POWER_COST|Y$£adm."
+ CENTRALIZE_STATE_NOPOWER:0 "ステートを集権化するために十分な統治力を持っていません。$POWER_COST|Y$£adm が必要なところ、現在$POWER_AVAILABLE|Y$£adm です。"
+ EXPAND_INFRASTRUCTURE_NOPOWER:0 "インフラを拡張するために十分な統治力を持っていません。$POWER_COST|Y$£adm が必要なところ、現在$POWER_AVAILABLE|Y$£adm です。"
+ EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "州のインフラを$POWER_COST|Y$£admで拡張します。"
