Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -4556,9 +4556,9 @@
  flavor_swi.1.a:0 "偉大な学者だ。"
  flavor_swi.1.b:0 "やつの本と一緒に焼いてしまえ。"
  flavor_kor.6.t:0 "李舜臣"
- flavor_kor.6.d.1:0 "最近、李舜臣の裁判は、軍の上級部隊に多くの注目を集めている。敗走と怠慢を犯した李氏は、今やしばらく投獄されている。しかし、頻繁な拷問にもかかわらず、彼はまだ罪を認めていない。\n\nさらに、この男は軍事的な問題について自然に理解しているように思え、国境を越えてやって来た襲撃を撃退したことで彼の軍務実績は目覚しい成功を収めている。李氏の規律と勇気の評判は、彼の前にもたらされた罪と矛盾しているので、その裁判全体がこの男を犯人に仕立て上げる陰謀のにおいがする。\n\n彼を一般歩兵の階級に降格させる話があるが、決してこの男の才能はそんな低い立場で無駄にしていいものではない。"
- flavor_kor.6.d.2:0 "最近、李舜臣の裁判は、軍の上級部隊に多くの注目を集めている。敗走と怠慢を犯した李氏は、今やしばらく投獄されている。しかし、頻繁な拷問にもかかわらず、彼はまだ罪を認めていない。\n\nさらに、この男は軍事的な問題について自然に理解しているように思え、国境を越えてやって来た襲撃を撃退したことで彼の軍務実績は目覚しい成功を収めている。李氏の規律と勇気の評判は、彼の前にもたらされた罪と矛盾しているので、その裁判全体がこの男を犯人に仕立て上げる陰謀のにおいがする。\n\n彼を一般歩兵の階級に降格させる話があるが、現在の日本との戦争を考慮すると、決してこの男の才能はそんな低い立場で無駄にしていいものではない。"
- flavor_kor.6.a:0 "彼の技能は戦術レベルだと浪費されるだろう。そのため、彼を顧問にする。"
+ flavor_kor.6.d.1:0 "最近、李舜臣の裁判は、軍の上級部隊に多くの注目を集めている。敵前逃亡と怠慢の嫌疑により李は長い間投獄されており、頻繁な拷問にもかかわらず彼は未だ罪を否認している。\n\nさらに、この男は軍事に精通しているようであり、国外の敵の襲撃を立て続けに退ける顕著な成果を上げた軍歴がある。李の自制心と勇気についての評判は、彼にかけられた嫌疑と矛盾しており、裁判自体がこの男を陥れる陰謀の香りがする。\n\n彼を一兵卒に降格させる話があるが、決してこの男の才能はそんな低い立場で無駄にしていいものではない。"
+ flavor_kor.6.d.2:0 "最近、李舜臣の裁判は、軍の上級部隊に多くの注目を集めている。敵前逃亡と怠慢の嫌疑により李は長い間投獄されており、頻繁な拷問にもかかわらず彼は未だ罪を否認している。\n\nさらに、この男は軍事に精通しているようであり、国外の敵の襲撃を立て続けに退ける顕著な成果を上げた軍歴がある。李の自制心と勇気についての評判は、彼にかけられた嫌疑と矛盾しており、裁判自体がこの男を陥れる陰謀の香りがする。\n\n彼を一兵卒に降格させる話があるが、現在の日本との戦争を考慮すると、決してこの男の才能はそんな低い立場で無駄にしていいものではない。"
+ flavor_kor.6.a:0 "彼の能力を戦術単位で使うのは無駄だ。顧問にしよう。"
  flavor_kor.6.b:0 "彼のような輝きを持つ男は指揮官としてすぐに復帰しなければならない。"
  flavor_kor.6.c:0 "我々には海軍を担当する才能のある人物がどうしても必要だ。"
  flavor_kor.6.d:0 "司法制度に干渉しないほうがいい。"
@@ -4573,7 +4573,7 @@
  flavor_daimyo.2.t:0 "後北条氏の台頭"
  flavor_daimyo.2.d:0 "この地方への過去の繋がりがないものの、北条氏の一族はすぐに武蔵国で傑出した存在となった。いくつかの地域を統一した彼らは、彼らの首都として小田原に強大な城を建設している。これはかなり印象的ではあるが、地元の我々の家臣に対する反逆でもある。"
  flavor_daimyo.2.a:0 "北条氏が光り輝く時だ。"
- flavor_daimyo.2.b:0 "これらの裏切り者を打ち倒そう。"
+ flavor_daimyo.2.b:0 "この裏切り者共を打ち倒そう。"
  flavor_daimyo.3.t:0 "毛利氏"
  flavor_daimyo.3.d:0 "大江広元の子孫として、毛利氏の一族は安芸国で急速に成長した。巧みな機動と軍事力を駆使して、多くの地方の敵を倒し、自身の能力によって印象的な将軍として名を馳せた。現時点では、毛利氏の地域全体への影響力は我々の支配を過去のものにするほど成長しており、我々がすぐに行動しない限り、毛利氏が彼ら自身の権利により、今や派閥であるという事実を受け入れなくてはならない。"
  flavor_daimyo.3.a:0 "安芸は毛利の領国だ。"
