--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -5580,7 +5580,7 @@
  mas_articles_of_the_confederation:0 "連合規約"
  mas_articles_of_the_confederation_desc:0 "我が国家、マディアスは選挙を通じて選出された最高司令官の役割を担うダトゥであるパイブロンの評議会により統治された3つの主権地域の連合である。このように、我々は常に共通の防衛の指導者がおり、国民の政治に関連する政治的中核を保つことができる。"
  mas_masters_of_maritime_warfare:0 "海戦名人"
- mas_masters_of_maritime_warfare_desc:0 "我が強力な海洋の遺産は我が国家を公海で恐れられる存在とした。我らの富を盗もうとする者から交易を守るためには、ムスリムや中国人、多くのインド化された王国の一つといった外国艦隊へ一定の圧力を掛けなければならない。中にはこの行為を海賊行為と呼ぶものもいるが、それは自分自身を正しく保護していない彼らの責任である。"
+ mas_masters_of_maritime_warfare_desc:0 "我が強力な海洋の遺産は我が国家を外海で恐れられる存在とした。我らの富を盗もうとする者から交易を守るためには、ムスリムや中国人、多くのインド化された王国の一つといった外国艦隊へ一定の圧力を掛けなければならない。中にはこの行為を海賊行為と呼ぶものもいるが、それは自分自身を正しく保護していない彼らの責任である。"
  mas_kinaduatan:0 "キナダトゥアン"
  mas_kinaduatan_desc:0 "代々、我々の社会は神の力に認められたダトゥ一族の権力を維持してきた。彼らの血には正義と成功の支配権のための使命と才能が流れている。伝統には多くの力がある。我らが繁栄するには、キナダトゥアンの権利を保護しながら、これらの社会構造を世界と発展中の帝国に適応させねばならない。"
  mas_riches_of_the_visayas:0 "ビサヤ諸島の富"
