--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -16,7 +16,7 @@
  have_two_subjects_title:0 "従属国の獲得"
  have_two_subjects_desc:0 "誰もそれを認識しない力の何が良いのだろう？我々は[Root.GetName]のような国家に期待される、敬意を払う従属国を獲得する必要がある。"
  establish_high_seas_navy_title:1 "大艦隊の創設"
- establish_high_seas_navy_desc:0 "権力を海外に投影できるようにするためには、公海上の海軍が必要である。軍艦は高価かもしれないが、支配する新しい市場や征服する人々を見つけることができれば、それは価値ある投資だ。"
+ establish_high_seas_navy_desc:0 "海を越えて戦力投射をしたいのであれば外洋海軍が必須である。軍艦は高価かもしれないが、新たに支配する市場や征服できる原住民を見つけることができれば、それに見合った価値はある投資だろう。"
  dominate_home_trade_node_title:1 "交易の支配"
  dominate_home_trade_node_desc:0 "我々の商人社会は、長きにわたり、より強く成長してきた。我々は国内交易を真に支配するため必要な支援を彼らに与える時だ。外国人の力が、我々の国民の幸福に影響を与えることを許すべきではない。"
  dominant_home_node_reward_tooltip:0 "今後の運動により、あなたの国内の交易ノードにおいて保有する州の一つが以下を得るでしょう：\n州の交易力：§G+10.00§!\n州の開発コスト：§G-5%§!"
